@@ -17,6 +17,7 @@
  */
 package com.graphhopper.api;
 
+import com.fasterxml.jackson.core.JsonProcessingException;
 import com.fasterxml.jackson.databind.JsonNode;
 import com.fasterxml.jackson.databind.ObjectMapper;
 import com.fasterxml.jackson.databind.node.ArrayNode;
@@ -25,21 +26,20 @@ import com.graphhopper.GHRequest;
 import com.graphhopper.GHResponse;
 import com.graphhopper.ResponsePath;
 import com.graphhopper.jackson.Jackson;
-import com.graphhopper.jackson.ResponsePathDeserializer;
+import com.graphhopper.jackson.ResponsePathDeserializerHelper;
+import com.graphhopper.util.CustomModel;
 import com.graphhopper.util.Helper;
 import com.graphhopper.util.Parameters;
 import com.graphhopper.util.shapes.GHPoint;
-import okhttp3.OkHttpClient;
-import okhttp3.Request;
-import okhttp3.RequestBody;
-import okhttp3.ResponseBody;
+import okhttp3.*;
 
-import java.io.UnsupportedEncodingException;
 import java.net.URLEncoder;
+import java.nio.charset.StandardCharsets;
 import java.util.*;
 import java.util.concurrent.TimeUnit;
 
 import static com.graphhopper.api.GraphHopperMatrixWeb.*;
+import static com.graphhopper.api.Version.GH_VERSION_FROM_MAVEN;
 import static com.graphhopper.util.Helper.round6;
 import static com.graphhopper.util.Helper.toLowerCase;
 import static com.graphhopper.util.Parameters.Routing.CALC_POINTS;
@@ -53,6 +53,7 @@ import static com.graphhopper.util.Parameters.Routing.INSTRUCTIONS;
  */
 public class GraphHopperWeb {
 
+    public static final String X_GH_CLIENT_VERSION = "X-GH-Client-Version";
     private final ObjectMapper objectMapper;
     private final String routeServiceUrl;
     private OkHttpClient downloader;
@@ -63,7 +64,7 @@ public class GraphHopperWeb {
     private String optimize = "false";
     private boolean postRequest = true;
     private int maxUnzippedLength = 1000;
-    private final Set<String> ignoreSet;
+    private final Set<String> ignoreSetForGet;
     private final Set<String> ignoreSetForPost;
 
     public static final String TIMEOUT = "timeout";
@@ -89,24 +90,26 @@ public class GraphHopperWeb {
         ignoreSetForPost.add("elevation");
         ignoreSetForPost.add("optimize");
         ignoreSetForPost.add("points_encoded");
+        ignoreSetForPost.add("points_encoded_multiplier");
 
-        ignoreSet = new HashSet<>();
-        ignoreSet.add(KEY);
-        ignoreSet.add(CALC_POINTS);
-        ignoreSet.add("calcpoints");
-        ignoreSet.add(INSTRUCTIONS);
-        ignoreSet.add("elevation");
-        ignoreSet.add("optimize");
+        ignoreSetForGet = new HashSet<>();
+        ignoreSetForGet.add(KEY);
+        ignoreSetForGet.add(CALC_POINTS);
+        ignoreSetForGet.add("calcpoints");
+        ignoreSetForGet.add(INSTRUCTIONS);
+        ignoreSetForGet.add("elevation");
+        ignoreSetForGet.add("optimize");
 
         // some parameters are in the request:
-        ignoreSet.add("algorithm");
-        ignoreSet.add("locale");
-        ignoreSet.add("point");
+        ignoreSetForGet.add("algorithm");
+        ignoreSetForGet.add("locale");
+        ignoreSetForGet.add("point");
 
         // some are special and need to be avoided
-        ignoreSet.add("points_encoded");
-        ignoreSet.add("pointsencoded");
-        ignoreSet.add("type");
+        ignoreSetForGet.add("points_encoded");
+        ignoreSetForGet.add("pointsencoded");
+        ignoreSetForGet.add("points_encoded_multiplier");
+        ignoreSetForGet.add("type");
         objectMapper = Jackson.newObjectMapper();
     }
 
@@ -125,7 +128,7 @@ public class GraphHopperWeb {
     }
 
     public GraphHopperWeb setKey(String key) {
-        Objects.requireNonNull(key,"Key must not be null");
+        Objects.requireNonNull(key, "Key must not be null");
         if (key.isEmpty()) {
             throw new IllegalArgumentException("Key must not be empty");
         }
@@ -134,9 +137,8 @@ public class GraphHopperWeb {
         return this;
     }
 
-
     /**
-     * Use new endpoint 'POST /route' instead of 'GET /route'
+     * If false it will use the 'GET /route' endpoint instead of the default 'POST /route'.
      */
     public GraphHopperWeb setPostRequest(boolean postRequest) {
         this.postRequest = postRequest;
@@ -174,8 +176,6 @@ public class GraphHopperWeb {
      *                 location is optimized according to the overall best route and returned
      *                 this way i.e. the traveling salesman problem is solved under the hood.
      *                 Note that in this case the request takes longer and costs more credits.
-     *                 For more details see:
-     *                 https://github.com/graphhopper/directions-api/blob/master/FAQ.md#what-is-one-credit
      */
     public GraphHopperWeb setOptimize(String optimize) {
         this.optimize = optimize;
@@ -190,20 +190,26 @@ public class GraphHopperWeb {
             ghRequest.getHints().remove("turn_description"); // do not include in request
 
             Request okRequest = postRequest ? createPostRequest(ghRequest) : createGetRequest(ghRequest);
-            rspBody = getClientForRequest(ghRequest).newCall(okRequest).execute().body();
+            Response rsp = getClientForRequest(ghRequest).newCall(okRequest).execute();
+            rspBody = rsp.body();
             JsonNode json = objectMapper.reader().readTree(rspBody.byteStream());
 
             GHResponse res = new GHResponse();
-            res.addErrors(ResponsePathDeserializer.readErrors(objectMapper, json));
+            res.addErrors(ResponsePathDeserializerHelper.readErrors(objectMapper, json));
             if (res.hasErrors())
                 return res;
 
             JsonNode paths = json.get("paths");
-
             for (JsonNode path : paths) {
-                ResponsePath altRsp = ResponsePathDeserializer.createResponsePath(objectMapper, path, tmpElevation, tmpTurnDescription);
+                ResponsePath altRsp = ResponsePathDeserializerHelper.createResponsePath(objectMapper, path, tmpElevation, tmpTurnDescription);
                 res.add(altRsp);
             }
+
+            for (Map.Entry<String, List<String>> entry : rsp.headers().toMultimap().entrySet()) {
+                res.getHints().putObject(entry.getKey(), entry.getValue());
+            }
+            JsonNode b = json.get("hints");
+            b.fields().forEachRemaining(f -> res.getHints().putObject(f.getKey(), Helper.toObject(f.getValue().asText())));
 
             return res;
 
@@ -227,20 +233,39 @@ public class GraphHopperWeb {
         return client;
     }
 
-    private Request createPostRequest(GHRequest ghRequest) {
+    Request createPostRequest(GHRequest ghRequest) {
         String tmpServiceURL = ghRequest.getHints().getString(SERVICE_URL, routeServiceUrl);
         String url = tmpServiceURL + "?";
         if (!Helper.isEmpty(key))
-            url += "key=" + key;
+            url += "key=" + encodeURL(key);
 
+        ObjectNode requestJson = requestToJson(ghRequest);
+        String body;
+        try {
+            body = objectMapper.writeValueAsString(requestJson);
+        } catch (JsonProcessingException e) {
+            throw new RuntimeException("Could not write request body", e);
+        }
+        Request.Builder builder = new Request.Builder().url(url).post(RequestBody.create(MT_JSON, body));
+        builder.header(X_GH_CLIENT_VERSION, GH_VERSION_FROM_MAVEN);
+        // force avoiding our GzipRequestInterceptor for smaller requests ~30 locations
+        if (body.length() < maxUnzippedLength)
+            builder.header("Content-Encoding", "identity");
+        return builder.build();
+    }
+
+    ObjectNode requestToJson(GHRequest ghRequest) {
         ObjectNode requestJson = objectMapper.createObjectNode();
         requestJson.putArray("points").addAll(createPointList(ghRequest.getPoints()));
         if (!ghRequest.getPointHints().isEmpty())
             requestJson.putArray("point_hints").addAll(createStringList(ghRequest.getPointHints()));
+        if (!ghRequest.getHeadings().isEmpty())
+            requestJson.putArray("headings").addAll(createDoubleList(ghRequest.getHeadings()));
         if (!ghRequest.getCurbsides().isEmpty())
             requestJson.putArray("curbsides").addAll(createStringList(ghRequest.getCurbsides()));
-        if (!ghRequest.getSnapPreventions().isEmpty())
+        if (ghRequest.hasSnapPreventions())
             requestJson.putArray("snap_preventions").addAll(createStringList(ghRequest.getSnapPreventions()));
+
         if (!ghRequest.getPathDetails().isEmpty())
             requestJson.putArray("details").addAll(createStringList(ghRequest.getPathDetails()));
 
@@ -251,10 +276,13 @@ public class GraphHopperWeb {
             requestJson.put("algorithm", ghRequest.getAlgorithm());
 
         requestJson.put("points_encoded", true);
+        requestJson.put("points_encoded_multiplier", 1e6);
         requestJson.put(INSTRUCTIONS, ghRequest.getHints().getBool(INSTRUCTIONS, instructions));
         requestJson.put(CALC_POINTS, ghRequest.getHints().getBool(CALC_POINTS, calcPoints));
         requestJson.put("elevation", ghRequest.getHints().getBool("elevation", elevation));
         requestJson.put("optimize", ghRequest.getHints().getString("optimize", optimize));
+        if (ghRequest.getCustomModel() != null)
+            requestJson.putPOJO(CustomModel.KEY, ghRequest.getCustomModel());
 
         Map<String, Object> hintsMap = ghRequest.getHints().toMap();
         for (Map.Entry<String, Object> entry : hintsMap.entrySet()) {
@@ -268,15 +296,13 @@ public class GraphHopperWeb {
             else
                 requestJson.putPOJO(hintKey, entry.getValue());
         }
-        String stringData = requestJson.toString();
-        Request.Builder builder = new Request.Builder().url(url).post(RequestBody.create(MT_JSON, stringData));
-        // force avoiding our GzipRequestInterceptor for smaller requests ~30 locations
-        if (stringData.length() < maxUnzippedLength)
-            builder.header("Content-Encoding", "identity");
-        return builder.build();
+        return requestJson;
     }
 
     Request createGetRequest(GHRequest ghRequest) {
+        if (ghRequest.getCustomModel() != null)
+            throw new IllegalArgumentException("Custom models cannot be used for GET requests. Use setPostRequest(true)");
+
         boolean tmpInstructions = ghRequest.getHints().getBool(INSTRUCTIONS, instructions);
         boolean tmpCalcPoints = ghRequest.getHints().getBool(CALC_POINTS, calcPoints);
         String tmpOptimize = ghRequest.getHints().getString("optimize", optimize);
@@ -290,18 +316,19 @@ public class GraphHopperWeb {
 
         String places = "";
         for (GHPoint p : ghRequest.getPoints()) {
-            places += "point=" + round6(p.lat) + "," + round6(p.lon) + "&";
+            places += "&point=" + round6(p.lat) + "," + round6(p.lon);
         }
 
         String type = ghRequest.getHints().getString("type", "json");
 
         String url = routeServiceUrl
                 + "?"
+                + "profile=" + ghRequest.getProfile()
                 + places
-                + "&profile=" + ghRequest.getProfile()
                 + "&type=" + type
                 + "&instructions=" + tmpInstructions
                 + "&points_encoded=true"
+                + "&points_encoded_multiplier=1000000"
                 + "&calc_points=" + tmpCalcPoints
                 + "&algorithm=" + ghRequest.getAlgorithm()
                 + "&locale=" + ghRequest.getLocale().toString()
@@ -309,31 +336,32 @@ public class GraphHopperWeb {
                 + "&optimize=" + tmpOptimize;
 
         for (String details : ghRequest.getPathDetails()) {
-            url += "&" + Parameters.Details.PATH_DETAILS + "=" + details;
+            url += "&" + Parameters.Details.PATH_DETAILS + "=" + encodeURL(details);
         }
 
-        // append *all* point hints only if at least *one* is not empty
-        for (String checkEmptyHint : ghRequest.getPointHints()) {
-            if (!checkEmptyHint.isEmpty()) {
-                for (String hint : ghRequest.getPointHints()) {
-                    url += "&" + Parameters.Routing.POINT_HINT + "=" + encodeURL(hint);
+        // append *all* point hints if at least one is not empty
+        if (ghRequest.getPointHints().stream().anyMatch(h -> !h.isEmpty()))
+            for (String hint : ghRequest.getPointHints())
+                url += "&" + Parameters.Routing.POINT_HINT + "=" + encodeURL(hint);
+
+
+        // append *all* curbsides if at least one is not empty
+        if (ghRequest.getCurbsides().stream().anyMatch(c -> !c.isEmpty()))
+            for (String curbside : ghRequest.getCurbsides())
+                url += "&" + Parameters.Routing.CURBSIDE + "=" + encodeURL(curbside);
+
+        // append *all* headings only if at least *one* is not NaN
+        if (ghRequest.getHeadings().stream().anyMatch(h -> !Double.isNaN(h)))
+            for (Double heading : ghRequest.getHeadings())
+                url += "&heading=" + heading;
+
+        if (ghRequest.hasSnapPreventions()) {
+            if (ghRequest.getSnapPreventions().isEmpty())
+                url += "&" + Parameters.Routing.SNAP_PREVENTION + "="; // send empty value to indicate explicit empty list
+            else
+                for (String snapPrevention : ghRequest.getSnapPreventions()) {
+                    url += "&" + Parameters.Routing.SNAP_PREVENTION + "=" + encodeURL(snapPrevention);
                 }
-                break;
-            }
-        }
-
-        // append *all* curbsides only if at least *one* is not empty
-        for (String checkEitherSide : ghRequest.getCurbsides()) {
-            if (!checkEitherSide.isEmpty()) {
-                for (String curbside : ghRequest.getCurbsides()) {
-                    url += "&" + Parameters.Routing.CURBSIDE + "=" + encodeURL(curbside);
-                }
-                break;
-            }
-        }
-
-        for (String snapPrevention : ghRequest.getSnapPreventions()) {
-            url += "&" + Parameters.Routing.SNAP_PREVENTION + "=" + encodeURL(snapPrevention);
         }
 
         if (!key.isEmpty()) {
@@ -345,7 +373,7 @@ public class GraphHopperWeb {
             String urlValue = entry.getValue().toString();
 
             // use lower case conversion for check only!
-            if (ignoreSet.contains(toLowerCase(urlKey))) {
+            if (ignoreSetForGet.contains(toLowerCase(urlKey))) {
                 continue;
             }
 
@@ -354,21 +382,27 @@ public class GraphHopperWeb {
             }
         }
 
-        return new Request.Builder().url(url).build();
+        return new Request.Builder().url(url)
+                .header(X_GH_CLIENT_VERSION, GH_VERSION_FROM_MAVEN)
+                .build();
     }
 
     public String export(GHRequest ghRequest) {
         String str = "Creating request failed";
+        ResponseBody body = null;
         try {
             if (postRequest)
                 throw new IllegalArgumentException("GPX export only works for GET requests, make sure to use `setPostRequest(false)`");
             Request okRequest = createGetRequest(ghRequest);
-            str = getClientForRequest(ghRequest).newCall(okRequest).execute().body().string();
+            body = getClientForRequest(ghRequest).newCall(okRequest).execute().body();
+            str = body.string();
 
             return str;
         } catch (Exception ex) {
             throw new RuntimeException("Problem while fetching export " + ghRequest.getPoints()
                     + ", error: " + ex.getMessage() + " response: " + str, ex);
+        } finally {
+            Helper.close(body);
         }
     }
 
@@ -376,6 +410,14 @@ public class GraphHopperWeb {
         ArrayNode outList = objectMapper.createArrayNode();
         for (String str : list) {
             outList.add(str);
+        }
+        return outList;
+    }
+
+    private ArrayNode createDoubleList(List<Double> list) {
+        ArrayNode outList = objectMapper.createArrayNode();
+        for (Double d : list) {
+            outList.add(d);
         }
         return outList;
     }
@@ -392,10 +434,6 @@ public class GraphHopperWeb {
     }
 
     private static String encodeURL(String str) {
-        try {
-            return URLEncoder.encode(str, "UTF-8");
-        } catch (UnsupportedEncodingException e) {
-            throw new RuntimeException(e);
-        }
+        return URLEncoder.encode(str, StandardCharsets.UTF_8);
     }
 }
