@@ -17,15 +17,15 @@
  */
 package com.graphhopper.routing;
 
-import com.graphhopper.reader.ReaderWay;
+import com.carrotsearch.hppc.IntArrayList;
 import com.graphhopper.routing.ev.*;
-import com.graphhopper.routing.util.*;
-import com.graphhopper.routing.weighting.FastestWeighting;
-import com.graphhopper.routing.weighting.ShortestWeighting;
+import com.graphhopper.routing.util.AllEdgesIterator;
+import com.graphhopper.routing.util.EncodingManager;
+import com.graphhopper.routing.util.TraversalMode;
+import com.graphhopper.routing.weighting.SpeedWeighting;
 import com.graphhopper.routing.weighting.Weighting;
+import com.graphhopper.storage.BaseGraph;
 import com.graphhopper.storage.Graph;
-import com.graphhopper.storage.GraphBuilder;
-import com.graphhopper.storage.IntsRef;
 import com.graphhopper.storage.NodeAccess;
 import com.graphhopper.util.*;
 import com.graphhopper.util.details.PathDetail;
@@ -35,6 +35,7 @@ import org.junit.jupiter.api.Test;
 
 import java.util.*;
 
+import static com.graphhopper.search.KVStorage.KValue;
 import static com.graphhopper.storage.AbstractGraphStorageTester.assertPList;
 import static com.graphhopper.util.Parameters.Details.*;
 import static org.junit.jupiter.api.Assertions.*;
@@ -43,19 +44,29 @@ import static org.junit.jupiter.api.Assertions.*;
  * @author Peter Karich
  */
 public class PathTest {
-    private final FlagEncoder encoder = new CarFlagEncoder();
-    private final EncodingManager carManager = EncodingManager.create(encoder);
-    private final BooleanEncodedValue carAccessEnc = encoder.getAccessEnc();
-    private final DecimalEncodedValue carAvSpeedEnv = encoder.getAverageSpeedEnc();
-    private final EncodingManager mixedEncoders = EncodingManager.create(new CarFlagEncoder(), new FootFlagEncoder());
+    private final DecimalEncodedValue carAvSpeedEnc = new DecimalEncodedValueImpl("speed", 5, 5, true);
+    private final EncodingManager carManager = EncodingManager.start().add(carAvSpeedEnc).
+            add(VehicleAccess.create("car")).add(Roundabout.create()).add(RoadClass.create()).
+            add(RoadClassLink.create()).add(MaxSpeed.create()).build();
+
+    private final DecimalEncodedValue mixedCarSpeedEnc = new DecimalEncodedValueImpl("mixed_car_speed", 5, 5, true);
+    private final BooleanEncodedValue mixedCarAccessEnc = VehicleAccess.create("car");
+    private final DecimalEncodedValue mixedFootSpeedEnc = new DecimalEncodedValueImpl("mixed_foot_speed", 4, 1, true);
+    private final EncodingManager mixedEncodingManager = EncodingManager.start().
+            add(mixedCarAccessEnc).
+            add(mixedCarSpeedEnc).add(mixedFootSpeedEnc).
+            add(RoadClass.create()).
+            add(RoadClassLink.create()).
+            add(MaxSpeed.create()).
+            add(Roundabout.create()).build();
     private final TranslationMap trMap = TranslationMapTest.SINGLETON;
     private final Translation tr = trMap.getWithFallBack(Locale.US);
-    private final RoundaboutGraph roundaboutGraph = new RoundaboutGraph(mixedEncoders);
+    private final RoundaboutGraph roundaboutGraph = new RoundaboutGraph();
     private final Graph pathDetailGraph = generatePathDetailsGraph();
 
     @Test
     public void testFound() {
-        Graph g = new GraphBuilder(carManager).create();
+        BaseGraph g = new BaseGraph.Builder(carManager).create();
         Path p = new Path(g);
         assertFalse(p.isFound());
         assertEquals(0, p.getDistance(), 1e-7);
@@ -64,42 +75,35 @@ public class PathTest {
 
     @Test
     public void testWayList() {
-        Graph g = new GraphBuilder(carManager).create();
+        BaseGraph g = new BaseGraph.Builder(carManager).create();
         NodeAccess na = g.getNodeAccess();
         na.setNode(0, 0.0, 0.1);
         na.setNode(1, 1.0, 0.1);
         na.setNode(2, 2.0, 0.1);
 
-        EdgeIteratorState edge1 = g.edge(0, 1).setDistance(1000).set(carAccessEnc, true, true).set(carAvSpeedEnv, 10.0);
+        EdgeIteratorState edge1 = g.edge(0, 1).setDistance(1000).set(carAvSpeedEnc, 10.0, 10.0);
 
         edge1.setWayGeometry(Helper.createPointList(8, 1, 9, 1));
-        EdgeIteratorState edge2 = g.edge(2, 1).setDistance(2000).set(carAccessEnc, true, true).set(carAvSpeedEnv, 50.0);
+        EdgeIteratorState edge2 = g.edge(2, 1).setDistance(2000).set(carAvSpeedEnc, 50.0, 50.0);
         edge2.setWayGeometry(Helper.createPointList(11, 1, 10, 1));
 
-        SPTEntry e1 = new SPTEntry(edge2.getEdge(), 2, 1);
-        e1.parent = new SPTEntry(edge1.getEdge(), 1, 1);
-        e1.parent.parent = new SPTEntry(-1, 0, 1);
-        FastestWeighting weighting = new FastestWeighting(encoder);
+        SPTEntry e1 = new SPTEntry(edge2.getEdge(), 2, 1, new SPTEntry(edge1.getEdge(), 1, 1, new SPTEntry(0, 1)));
+        Weighting weighting = new SpeedWeighting(carAvSpeedEnc);
         Path path = extractPath(g, weighting, e1);
         // 0-1-2
         assertPList(Helper.createPointList(0, 0.1, 8, 1, 9, 1, 1, 0.1, 10, 1, 11, 1, 2, 0.1), path.calcPoints());
         InstructionList instr = InstructionsFromEdges.calcInstructions(path, path.graph, weighting, carManager, tr);
         Instruction tmp = instr.get(0);
         assertEquals(3000.0, tmp.getDistance(), 0.0);
-        assertEquals(504000L, tmp.getTime());
+        assertEquals(140000L, tmp.getTime());
         assertEquals("continue", tmp.getTurnDescription(tr));
-//        assertEquals("[0, 6]", tmp.get("interval").toString());
         assertEquals(6, tmp.getLength());
-//        System.out.println(tmp.getPoints());
-
 
         tmp = instr.get(1);
         assertEquals(0.0, tmp.getDistance(), 0.0);
         assertEquals(0L, tmp.getTime());
         assertEquals("arrive at destination", tmp.getTurnDescription(tr));
-//        assertEquals("[6, 6]", tmp.get("interval").toString());
         assertEquals(0, tmp.getLength());
-//        System.out.println(tmp.getPoints());
 
         int acc = 0;
         for (Instruction instruction : instr) {
@@ -108,25 +112,27 @@ public class PathTest {
         assertEquals(path.calcPoints().size() - 1, acc);
 
         // force minor change for instructions
-        edge2.setName("2");
+        edge2.setKeyValues(Map.of(STREET_NAME, new KValue("2")));
         na.setNode(3, 1.0, 1.0);
-        g.edge(1, 3).setDistance(1000).set(carAccessEnc, true, true).set(carAvSpeedEnv, 10.0);
+        g.edge(1, 3).setDistance(1000).set(carAvSpeedEnc, 10.0, 10.0);
 
-        e1 = new SPTEntry(edge2.getEdge(), 2, 1);
-        e1.parent = new SPTEntry(edge1.getEdge(), 1, 1);
-        e1.parent.parent = new SPTEntry(-1, 0, 1);
+        e1 = new SPTEntry(edge2.getEdge(), 2, 1,
+                new SPTEntry(edge1.getEdge(), 1, 1,
+                        new SPTEntry(0, 1)
+                )
+        );
         path = extractPath(g, weighting, e1);
         instr = InstructionsFromEdges.calcInstructions(path, path.graph, weighting, carManager, tr);
 
         tmp = instr.get(0);
         assertEquals(1000.0, tmp.getDistance(), 0);
-        assertEquals(360000L, tmp.getTime());
+        assertEquals(100000L, tmp.getTime());
         assertEquals("continue", tmp.getTurnDescription(tr));
         assertEquals(3, tmp.getLength());
 
         tmp = instr.get(1);
         assertEquals(2000.0, tmp.getDistance(), 0);
-        assertEquals(144000L, tmp.getTime());
+        assertEquals(40000L, tmp.getTime());
         assertEquals("turn sharp right onto 2", tmp.getTurnDescription(tr));
         assertEquals(3, tmp.getLength());
         acc = 0;
@@ -136,9 +142,7 @@ public class PathTest {
         assertEquals(path.calcPoints().size() - 1, acc);
 
         // now reverse order
-        e1 = new SPTEntry(edge1.getEdge(), 0, 1);
-        e1.parent = new SPTEntry(edge2.getEdge(), 1, 1);
-        e1.parent.parent = new SPTEntry(-1, 2, 1);
+        e1 = new SPTEntry(edge1.getEdge(), 0, 1, new SPTEntry(edge2.getEdge(), 1, 1, new SPTEntry(2, 1)));
         path = extractPath(g, weighting, e1);
         // 2-1-0
         assertPList(Helper.createPointList(2, 0.1, 11, 1, 10, 1, 1, 0.1, 9, 1, 8, 1, 0, 0.1), path.calcPoints());
@@ -146,13 +150,13 @@ public class PathTest {
         instr = InstructionsFromEdges.calcInstructions(path, path.graph, weighting, carManager, tr);
         tmp = instr.get(0);
         assertEquals(2000.0, tmp.getDistance(), 0);
-        assertEquals(144000L, tmp.getTime());
+        assertEquals(40000L, tmp.getTime());
         assertEquals("continue onto 2", tmp.getTurnDescription(tr));
         assertEquals(3, tmp.getLength());
 
         tmp = instr.get(1);
         assertEquals(1000.0, tmp.getDistance(), 0);
-        assertEquals(360000L, tmp.getTime());
+        assertEquals(100000L, tmp.getTime());
         assertEquals("turn sharp left", tmp.getTurnDescription(tr));
         assertEquals(3, tmp.getLength());
         acc = 0;
@@ -164,7 +168,7 @@ public class PathTest {
 
     @Test
     public void testFindInstruction() {
-        Graph g = new GraphBuilder(carManager).create();
+        BaseGraph g = new BaseGraph.Builder(carManager).create();
         NodeAccess na = g.getNodeAccess();
         na.setNode(0, 0.0, 0.0);
         na.setNode(1, 5.0, 0.0);
@@ -173,29 +177,31 @@ public class PathTest {
         na.setNode(4, 7.5, 0.25);
         na.setNode(5, 5.0, 1.0);
 
-        EdgeIteratorState edge1 = g.edge(0, 1).setDistance(1000).set(carAccessEnc, true, true).set(carAvSpeedEnv, 50.0);
+        EdgeIteratorState edge1 = g.edge(0, 1).setDistance(1000).set(carAvSpeedEnc, 50.0, 50.0);
         edge1.setWayGeometry(Helper.createPointList());
-        edge1.setName("Street 1");
-        EdgeIteratorState edge2 = g.edge(1, 2).setDistance(1000).set(carAccessEnc, true, true).set(carAvSpeedEnv, 50.0);
+        edge1.setKeyValues(Map.of(STREET_NAME, new KValue("Street 1")));
+        EdgeIteratorState edge2 = g.edge(1, 2).setDistance(1000).set(carAvSpeedEnc, 50.0, 50.0);
         edge2.setWayGeometry(Helper.createPointList());
-        edge2.setName("Street 2");
-        EdgeIteratorState edge3 = g.edge(2, 3).setDistance(1000).set(carAccessEnc, true, true).set(carAvSpeedEnv, 50.0);
+        edge2.setKeyValues(Map.of(STREET_NAME, new KValue("Street 2")));
+        EdgeIteratorState edge3 = g.edge(2, 3).setDistance(1000).set(carAvSpeedEnc, 50.0, 50.0);
         edge3.setWayGeometry(Helper.createPointList());
-        edge3.setName("Street 3");
-        EdgeIteratorState edge4 = g.edge(3, 4).setDistance(500).set(carAccessEnc, true, true).set(carAvSpeedEnv, 50.0);
+        edge3.setKeyValues(Map.of(STREET_NAME, new KValue("Street 3")));
+        EdgeIteratorState edge4 = g.edge(3, 4).setDistance(500).set(carAvSpeedEnc, 50.0, 50.0);
         edge4.setWayGeometry(Helper.createPointList());
-        edge4.setName("Street 4");
+        edge4.setKeyValues(Map.of(STREET_NAME, new KValue("Street 4")));
 
-        g.edge(1, 5).setDistance(10000).set(carAccessEnc, true, true).set(carAvSpeedEnv, 50.0);
-        g.edge(2, 5).setDistance(10000).set(carAccessEnc, true, true).set(carAvSpeedEnv, 50.0);
-        g.edge(3, 5).setDistance(100000).set(carAccessEnc, true, true).set(carAvSpeedEnv, 50.0);
+        g.edge(1, 5).setDistance(10000).set(carAvSpeedEnc, 50.0, 50.0);
+        g.edge(2, 5).setDistance(10000).set(carAvSpeedEnc, 50.0, 50.0);
+        g.edge(3, 5).setDistance(100000).set(carAvSpeedEnc, 50.0, 50.0);
 
-        SPTEntry e1 = new SPTEntry(edge4.getEdge(), 4, 1);
-        e1.parent = new SPTEntry(edge3.getEdge(), 3, 1);
-        e1.parent.parent = new SPTEntry(edge2.getEdge(), 2, 1);
-        e1.parent.parent.parent = new SPTEntry(edge1.getEdge(), 1, 1);
-        e1.parent.parent.parent.parent = new SPTEntry(-1, 0, 1);
-        FastestWeighting weighting = new FastestWeighting(encoder);
+        SPTEntry e1 =
+                new SPTEntry(edge4.getEdge(), 4, 1,
+                        new SPTEntry(edge3.getEdge(), 3, 1,
+                                new SPTEntry(edge2.getEdge(), 2, 1,
+                                        new SPTEntry(edge1.getEdge(), 1, 1,
+                                                new SPTEntry(0, 1)
+                                        ))));
+        Weighting weighting = new SpeedWeighting(carAvSpeedEnc);
         Path path = extractPath(g, weighting, e1);
 
         InstructionList il = InstructionsFromEdges.calcInstructions(path, path.graph, weighting, carManager, tr);
@@ -211,50 +217,53 @@ public class PathTest {
      * Test roundabout instructions for different profiles
      */
     @Test
-    public void testCalcInstructionsRoundabout() {
-        for (FlagEncoder encoder : mixedEncoders.fetchEdgeEncoders()) {
-            ShortestWeighting weighting = new ShortestWeighting(encoder);
-            Path p = new Dijkstra(roundaboutGraph.g, weighting, TraversalMode.NODE_BASED)
-                    .calcPath(1, 8);
-            assertTrue(p.isFound());
-            assertEquals("[1, 2, 3, 4, 5, 8]", p.calcNodes().toString());
-            InstructionList wayList = InstructionsFromEdges.calcInstructions(p, p.graph, weighting, mixedEncoders, tr);
-            // Test instructions
-            List<String> tmpList = getTurnDescriptions(wayList);
-            assertEquals(Arrays.asList("continue onto MainStreet 1 2",
-                            "At roundabout, take exit 3 onto 5-8",
-                            "arrive at destination"),
-                    tmpList);
-            // Test Radian
-            double delta = roundaboutGraph.getAngle(1, 2, 5, 8);
-            RoundaboutInstruction instr = (RoundaboutInstruction) wayList.get(1);
-            assertEquals(delta, instr.getTurnAngle(), 0.01);
+    void testCalcInstructionsRoundabout() {
+        calcInstructionsRoundabout(mixedCarSpeedEnc);
+        calcInstructionsRoundabout(mixedFootSpeedEnc);
+    }
 
-            // case of continuing a street through a roundabout
-            p = new Dijkstra(roundaboutGraph.g, weighting, TraversalMode.NODE_BASED).
-                    calcPath(1, 7);
-            wayList = InstructionsFromEdges.calcInstructions(p, p.graph, weighting, mixedEncoders, tr);
-            tmpList = getTurnDescriptions(wayList);
-            assertEquals(Arrays.asList("continue onto MainStreet 1 2",
-                            "At roundabout, take exit 2 onto MainStreet 4 7",
-                            "arrive at destination"),
-                    tmpList);
-            // Test Radian
-            delta = roundaboutGraph.getAngle(1, 2, 4, 7);
-            instr = (RoundaboutInstruction) wayList.get(1);
-            assertEquals(delta, instr.getTurnAngle(), 0.01);
-        }
+    public void calcInstructionsRoundabout(DecimalEncodedValue speedEnc) {
+        Weighting weighting = new SpeedWeighting(speedEnc);
+        Path p = new Dijkstra(roundaboutGraph.g, weighting, TraversalMode.NODE_BASED)
+                .calcPath(1, 8);
+        assertTrue(p.isFound());
+        assertEquals("[1, 2, 3, 4, 5, 8]", p.calcNodes().toString());
+        InstructionList wayList = InstructionsFromEdges.calcInstructions(p, p.graph, weighting, mixedEncodingManager, tr);
+        // Test instructions
+        List<String> tmpList = getTurnDescriptions(wayList);
+        assertEquals(List.of("continue onto MainStreet 1 2",
+                        "At roundabout, take exit 3 onto 5-8",
+                        "arrive at destination"),
+                tmpList);
+        // Test Radian
+        double delta = roundaboutGraph.getAngle(1, 2, 5, 8);
+        RoundaboutInstruction instr = (RoundaboutInstruction) wayList.get(1);
+        assertEquals(delta, instr.getTurnAngle(), 0.01);
+
+        // case of continuing a street through a roundabout
+        p = new Dijkstra(roundaboutGraph.g, weighting, TraversalMode.NODE_BASED).
+                calcPath(1, 7);
+        wayList = InstructionsFromEdges.calcInstructions(p, p.graph, weighting, mixedEncodingManager, tr);
+        tmpList = getTurnDescriptions(wayList);
+        assertEquals(List.of("continue onto MainStreet 1 2",
+                        "At roundabout, take exit 2 onto MainStreet 4 7",
+                        "arrive at destination"),
+                tmpList);
+        // Test Radian
+        delta = roundaboutGraph.getAngle(1, 2, 4, 7);
+        instr = (RoundaboutInstruction) wayList.get(1);
+        assertEquals(delta, instr.getTurnAngle(), 0.01);
     }
 
     @Test
     public void testCalcInstructionsRoundaboutBegin() {
-        ShortestWeighting weighting = new ShortestWeighting(mixedEncoders.getEncoder("car"));
+        Weighting weighting = new SpeedWeighting(mixedCarSpeedEnc);
         Path p = new Dijkstra(roundaboutGraph.g, weighting, TraversalMode.NODE_BASED)
                 .calcPath(2, 8);
         assertTrue(p.isFound());
-        InstructionList wayList = InstructionsFromEdges.calcInstructions(p, p.graph, weighting, mixedEncoders, tr);
+        InstructionList wayList = InstructionsFromEdges.calcInstructions(p, p.graph, weighting, mixedEncodingManager, tr);
         List<String> tmpList = getTurnDescriptions(wayList);
-        assertEquals(Arrays.asList("At roundabout, take exit 3 onto 5-8",
+        assertEquals(List.of("At roundabout, take exit 3 onto 5-8",
                         "arrive at destination"),
                 tmpList);
     }
@@ -262,13 +271,13 @@ public class PathTest {
     @Test
     public void testCalcInstructionsRoundaboutDirectExit() {
         roundaboutGraph.inverse3to9();
-        ShortestWeighting weighting = new ShortestWeighting(mixedEncoders.getEncoder("car"));
+        Weighting weighting = new SpeedWeighting(mixedCarSpeedEnc);
         Path p = new Dijkstra(roundaboutGraph.g, weighting, TraversalMode.NODE_BASED)
                 .calcPath(6, 8);
         assertTrue(p.isFound());
-        InstructionList wayList = InstructionsFromEdges.calcInstructions(p, p.graph, weighting, mixedEncoders, tr);
+        InstructionList wayList = InstructionsFromEdges.calcInstructions(p, p.graph, weighting, mixedEncodingManager, tr);
         List<String> tmpList = getTurnDescriptions(wayList);
-        assertEquals(Arrays.asList("continue onto 3-6",
+        assertEquals(List.of("continue onto 3-6",
                         "At roundabout, take exit 3 onto 5-8",
                         "arrive at destination"),
                 tmpList);
@@ -277,20 +286,21 @@ public class PathTest {
 
     @Test
     public void testCalcAverageSpeedDetails() {
-        ShortestWeighting weighting = new ShortestWeighting(encoder);
+        Weighting weighting = new SpeedWeighting(carAvSpeedEnc);
+
         Path p = new Dijkstra(pathDetailGraph, weighting, TraversalMode.NODE_BASED).calcPath(1, 5);
         assertTrue(p.isFound());
 
         Map<String, List<PathDetail>> details = PathDetailsFromEdges.calcDetails(p, carManager, weighting,
-                Arrays.asList(AVERAGE_SPEED), new PathDetailsBuilderFactory(), 0);
-        assertTrue(details.size() == 1);
+                List.of(AVERAGE_SPEED), new PathDetailsBuilderFactory(), 0, pathDetailGraph);
+        assertEquals(1, details.size());
 
         List<PathDetail> averageSpeedDetails = details.get(AVERAGE_SPEED);
         assertEquals(4, averageSpeedDetails.size());
-        assertEquals(45.0, averageSpeedDetails.get(0).getValue());
-        assertEquals(90.0, averageSpeedDetails.get(1).getValue());
-        assertEquals(10.0, averageSpeedDetails.get(2).getValue());
-        assertEquals(45.0, averageSpeedDetails.get(3).getValue());
+        assertEquals(162.2, (double) averageSpeedDetails.get(0).getValue(), 1.e-3);
+        assertEquals(327.3, (double) averageSpeedDetails.get(1).getValue(), 1.e-3);
+        assertEquals(36.0, (double) averageSpeedDetails.get(2).getValue(), 1.e-3);
+        assertEquals(162.2, (double) averageSpeedDetails.get(3).getValue(), 1.e-3);
 
         assertEquals(0, averageSpeedDetails.get(0).getFirst());
         assertEquals(1, averageSpeedDetails.get(1).getFirst());
@@ -301,12 +311,12 @@ public class PathTest {
 
     @Test
     public void testCalcAverageSpeedDetailsWithShortDistances_issue1848() {
-        ShortestWeighting weighting = new ShortestWeighting(encoder);
+        Weighting weighting = new SpeedWeighting(carAvSpeedEnc);
         Path p = new Dijkstra(pathDetailGraph, weighting, TraversalMode.NODE_BASED).calcPath(1, 6);
         assertTrue(p.isFound());
         Map<String, List<PathDetail>> details = PathDetailsFromEdges.calcDetails(p, carManager, weighting,
-                Arrays.asList(AVERAGE_SPEED), new PathDetailsBuilderFactory(), 0);
-        assertTrue(details.size() == 1);
+                List.of(AVERAGE_SPEED), new PathDetailsBuilderFactory(), 0, pathDetailGraph);
+        assertEquals(1, details.size());
         List<PathDetail> averageSpeedDetails = details.get(AVERAGE_SPEED);
         assertEquals(4, averageSpeedDetails.size());
 
@@ -314,8 +324,8 @@ public class PathTest {
         p = new Dijkstra(pathDetailGraph, weighting, TraversalMode.NODE_BASED).calcPath(6, 1);
         assertTrue(p.isFound());
         details = PathDetailsFromEdges.calcDetails(p, carManager, weighting,
-                Arrays.asList(AVERAGE_SPEED), new PathDetailsBuilderFactory(), 0);
-        assertTrue(details.size() == 1);
+                List.of(AVERAGE_SPEED), new PathDetailsBuilderFactory(), 0, pathDetailGraph);
+        assertEquals(1, details.size());
         averageSpeedDetails = details.get(AVERAGE_SPEED);
         assertEquals(5, averageSpeedDetails.size());
         assertNull(averageSpeedDetails.get(0).getValue());
@@ -323,16 +333,16 @@ public class PathTest {
 
     @Test
     public void testCalcStreetNameDetails() {
-        ShortestWeighting weighting = new ShortestWeighting(encoder);
+        Weighting weighting = new SpeedWeighting(carAvSpeedEnc);
         Path p = new Dijkstra(pathDetailGraph, weighting, TraversalMode.NODE_BASED).calcPath(1, 5);
         assertTrue(p.isFound());
 
         Map<String, List<PathDetail>> details = PathDetailsFromEdges.calcDetails(p, carManager, weighting,
-                Arrays.asList(STREET_NAME), new PathDetailsBuilderFactory(), 0);
-        assertTrue(details.size() == 1);
+                List.of(STREET_NAME), new PathDetailsBuilderFactory(), 0, pathDetailGraph);
+        assertEquals(1, details.size());
 
         List<PathDetail> streetNameDetails = details.get(STREET_NAME);
-        assertTrue(details.size() == 1);
+        assertEquals(1, details.size());
 
         assertEquals(4, streetNameDetails.size());
         assertEquals("1-2", streetNameDetails.get(0).getValue());
@@ -349,13 +359,13 @@ public class PathTest {
 
     @Test
     public void testCalcEdgeIdDetails() {
-        ShortestWeighting weighting = new ShortestWeighting(encoder);
+        Weighting weighting = new SpeedWeighting(carAvSpeedEnc);
         Path p = new Dijkstra(pathDetailGraph, weighting, TraversalMode.NODE_BASED).calcPath(1, 5);
         assertTrue(p.isFound());
 
         Map<String, List<PathDetail>> details = PathDetailsFromEdges.calcDetails(p, carManager, weighting,
-                Arrays.asList(EDGE_ID), new PathDetailsBuilderFactory(), 0);
-        assertTrue(details.size() == 1);
+                List.of(EDGE_ID), new PathDetailsBuilderFactory(), 0, pathDetailGraph);
+        assertEquals(1, details.size());
 
         List<PathDetail> edgeIdDetails = details.get(EDGE_ID);
         assertEquals(4, edgeIdDetails.size());
@@ -374,12 +384,12 @@ public class PathTest {
 
     @Test
     public void testCalcEdgeKeyDetailsForward() {
-        ShortestWeighting weighting = new ShortestWeighting(encoder);
+        Weighting weighting = new SpeedWeighting(carAvSpeedEnc);
         Path p = new Dijkstra(pathDetailGraph, weighting, TraversalMode.NODE_BASED).calcPath(1, 5);
         assertTrue(p.isFound());
 
         Map<String, List<PathDetail>> details = PathDetailsFromEdges.calcDetails(p, carManager, weighting,
-                Arrays.asList(EDGE_KEY), new PathDetailsBuilderFactory(), 0);
+                List.of(EDGE_KEY), new PathDetailsBuilderFactory(), 0, pathDetailGraph);
         List<PathDetail> edgeKeyDetails = details.get(EDGE_KEY);
 
         assertEquals(4, edgeKeyDetails.size());
@@ -391,12 +401,12 @@ public class PathTest {
 
     @Test
     public void testCalcEdgeKeyDetailsBackward() {
-        ShortestWeighting weighting = new ShortestWeighting(encoder);
+        Weighting weighting = new SpeedWeighting(carAvSpeedEnc);
         Path p = new Dijkstra(pathDetailGraph, weighting, TraversalMode.NODE_BASED).calcPath(5, 1);
         assertTrue(p.isFound());
 
         Map<String, List<PathDetail>> details = PathDetailsFromEdges.calcDetails(p, carManager, weighting,
-                Arrays.asList(EDGE_KEY), new PathDetailsBuilderFactory(), 0);
+                List.of(EDGE_KEY), new PathDetailsBuilderFactory(), 0, pathDetailGraph);
         List<PathDetail> edgeKeyDetails = details.get(EDGE_KEY);
 
         assertEquals(4, edgeKeyDetails.size());
@@ -408,20 +418,21 @@ public class PathTest {
 
     @Test
     public void testCalcTimeDetails() {
-        ShortestWeighting weighting = new ShortestWeighting(encoder);
+        Weighting weighting = new SpeedWeighting(carAvSpeedEnc);
         Path p = new Dijkstra(pathDetailGraph, weighting, TraversalMode.NODE_BASED).calcPath(1, 5);
         assertTrue(p.isFound());
+        assertEquals(IntArrayList.from(1, 2, 3, 4, 5), p.calcNodes());
 
         Map<String, List<PathDetail>> details = PathDetailsFromEdges.calcDetails(p, carManager, weighting,
-                Arrays.asList(TIME), new PathDetailsBuilderFactory(), 0);
-        assertTrue(details.size() == 1);
+                List.of(TIME), new PathDetailsBuilderFactory(), 0, pathDetailGraph);
+        assertEquals(1, details.size());
 
         List<PathDetail> timeDetails = details.get(TIME);
         assertEquals(4, timeDetails.size());
-        assertEquals(400L, timeDetails.get(0).getValue());
-        assertEquals(200L, timeDetails.get(1).getValue());
-        assertEquals(3600L, timeDetails.get(2).getValue());
-        assertEquals(400L, timeDetails.get(3).getValue());
+        assertEquals(111L, timeDetails.get(0).getValue());
+        assertEquals(55L, timeDetails.get(1).getValue());
+        assertEquals(1000L, timeDetails.get(2).getValue());
+        assertEquals(111L, timeDetails.get(3).getValue());
 
         assertEquals(0, timeDetails.get(0).getFirst());
         assertEquals(1, timeDetails.get(1).getFirst());
@@ -432,13 +443,13 @@ public class PathTest {
 
     @Test
     public void testCalcDistanceDetails() {
-        ShortestWeighting weighting = new ShortestWeighting(encoder);
+        Weighting weighting = new SpeedWeighting(carAvSpeedEnc);
         Path p = new Dijkstra(pathDetailGraph, weighting, TraversalMode.NODE_BASED).calcPath(1, 5);
         assertTrue(p.isFound());
 
         Map<String, List<PathDetail>> details = PathDetailsFromEdges.calcDetails(p, carManager, weighting,
-                Arrays.asList(DISTANCE), new PathDetailsBuilderFactory(), 0);
-        assertTrue(details.size() == 1);
+                List.of(DISTANCE), new PathDetailsBuilderFactory(), 0, pathDetailGraph);
+        assertEquals(1, details.size());
 
         List<PathDetail> distanceDetails = details.get(DISTANCE);
         assertEquals(5D, distanceDetails.get(0).getValue());
@@ -447,19 +458,48 @@ public class PathTest {
         assertEquals(5D, distanceDetails.get(3).getValue());
     }
 
+    @Test
+    public void testCalcIntersectionDetails() {
+        Weighting weighting = new SpeedWeighting(carAvSpeedEnc);
+        Path p = new Dijkstra(pathDetailGraph, weighting, TraversalMode.NODE_BASED).calcPath(1, 5);
+        assertTrue(p.isFound());
+
+        Map<String, List<PathDetail>> details = PathDetailsFromEdges.calcDetails(p, carManager, weighting,
+                List.of(INTERSECTION), new PathDetailsBuilderFactory(), 0, pathDetailGraph);
+        assertEquals(1, details.size());
+
+        List<PathDetail> intersectionDetails = details.get(INTERSECTION);
+        assertEquals(4, intersectionDetails.size());
+
+        Map<String, Object> intersectionMap = new HashMap<>();
+        intersectionMap.put("out", 0);
+        intersectionMap.put("entries", List.of(true));
+        intersectionMap.put("bearings", List.of(90));
+
+        assertEquals(intersectionMap, intersectionDetails.get(0).getValue());
+
+        intersectionMap.clear();
+        intersectionMap.put("out", 0);
+        intersectionMap.put("in", 1);
+        intersectionMap.put("entries", List.of(true, false));
+        intersectionMap.put("bearings", List.of(90, 270));
+
+        assertEquals(intersectionMap, intersectionDetails.get(1).getValue());
+    }
+
     /**
      * case with one edge being not an exit
      */
     @Test
     public void testCalcInstructionsRoundabout2() {
         roundaboutGraph.inverse3to6();
-        ShortestWeighting weighting = new ShortestWeighting(mixedEncoders.getEncoder("car"));
+        Weighting weighting = new SpeedWeighting(mixedCarSpeedEnc);
         Path p = new Dijkstra(roundaboutGraph.g, weighting, TraversalMode.NODE_BASED)
                 .calcPath(1, 8);
         assertTrue(p.isFound());
-        InstructionList wayList = InstructionsFromEdges.calcInstructions(p, p.graph, weighting, mixedEncoders, tr);
+        InstructionList wayList = InstructionsFromEdges.calcInstructions(p, p.graph, weighting, mixedEncodingManager, tr);
         List<String> tmpList = getTurnDescriptions(wayList);
-        assertEquals(Arrays.asList("continue onto MainStreet 1 2",
+        assertEquals(List.of("continue onto MainStreet 1 2",
                         "At roundabout, take exit 2 onto 5-8",
                         "arrive at destination"),
                 tmpList);
@@ -472,7 +512,7 @@ public class PathTest {
 
     @Test
     public void testCalcInstructionsRoundaboutIssue353() {
-        final Graph graph = new GraphBuilder(carManager).create();
+        final BaseGraph graph = new BaseGraph.Builder(carManager).create();
         final NodeAccess na = graph.getNodeAccess();
 
         //
@@ -498,48 +538,46 @@ public class PathTest {
         na.setNode(10, 52.5135, 13.348);
         na.setNode(11, 52.514, 13.347);
 
-        GHUtility.setSpeed(60, true, false, encoder, graph.edge(2, 1).setDistance(5)).setName("MainStreet 2 1");
-        GHUtility.setSpeed(60, true, false, encoder, graph.edge(1, 11).setDistance(5)).setName("MainStreet 1 11");
+        graph.edge(2, 1).set(carAvSpeedEnc, 60, 0).setDistance(5).setKeyValues(Map.of(STREET_NAME, new KValue("MainStreet 2 1")));
+        graph.edge(1, 11).set(carAvSpeedEnc, 60, 0).setDistance(5).setKeyValues(Map.of(STREET_NAME, new KValue("MainStreet 1 11")));
 
         // roundabout
         EdgeIteratorState tmpEdge;
-        tmpEdge = GHUtility.setSpeed(60, true, false, encoder, graph.edge(3, 9).setDistance(2)).setName("3-9");
+        tmpEdge = graph.edge(3, 9).set(carAvSpeedEnc, 60, 0).setDistance(2).setKeyValues(Map.of(STREET_NAME, new KValue("3-9")));
         BooleanEncodedValue carManagerRoundabout = carManager.getBooleanEncodedValue(Roundabout.KEY);
-        carManagerRoundabout.setBool(false, tmpEdge.getFlags(), true);
-        tmpEdge.setFlags(tmpEdge.getFlags());
-        tmpEdge = GHUtility.setSpeed(60, true, false, encoder, graph.edge(9, 10).setDistance(2)).setName("9-10");
-        carManagerRoundabout.setBool(false, tmpEdge.getFlags(), true);
-        tmpEdge.setFlags(tmpEdge.getFlags());
-        tmpEdge = GHUtility.setSpeed(60, true, false, encoder, graph.edge(6, 10).setDistance(2)).setName("6-10");
-        carManagerRoundabout.setBool(false, tmpEdge.getFlags(), true);
-        tmpEdge.setFlags(tmpEdge.getFlags());
-        tmpEdge = GHUtility.setSpeed(60, true, false, encoder, graph.edge(10, 1).setDistance(2)).setName("10-1");
-        carManagerRoundabout.setBool(false, tmpEdge.getFlags(), true);
-        tmpEdge.setFlags(tmpEdge.getFlags());
-        tmpEdge = GHUtility.setSpeed(60, true, false, encoder, graph.edge(3, 2).setDistance(5)).setName("2-3");
-        carManagerRoundabout.setBool(false, tmpEdge.getFlags(), true);
-        tmpEdge.setFlags(tmpEdge.getFlags());
-        tmpEdge = GHUtility.setSpeed(60, true, false, encoder, graph.edge(4, 3).setDistance(5)).setName("3-4");
-        carManagerRoundabout.setBool(false, tmpEdge.getFlags(), true);
-        tmpEdge.setFlags(tmpEdge.getFlags());
-        tmpEdge = GHUtility.setSpeed(60, true, false, encoder, graph.edge(5, 4).setDistance(5)).setName("4-5");
-        carManagerRoundabout.setBool(false, tmpEdge.getFlags(), true);
-        tmpEdge.setFlags(tmpEdge.getFlags());
-        tmpEdge = GHUtility.setSpeed(60, true, false, encoder, graph.edge(2, 5).setDistance(5)).setName("5-2");
-        carManagerRoundabout.setBool(false, tmpEdge.getFlags(), true);
-        tmpEdge.setFlags(tmpEdge.getFlags());
+        tmpEdge.set(carManagerRoundabout, true);
+        tmpEdge = graph.edge(9, 10).set(carAvSpeedEnc, 60, 0).setDistance(2).setKeyValues(Map.of(STREET_NAME, new KValue("9-10")));
+        tmpEdge.set(carManagerRoundabout, true);
+        tmpEdge = graph.edge(6, 10).set(carAvSpeedEnc, 60, 0).setDistance(2).setKeyValues(Map.of(STREET_NAME, new KValue("6-10")));
+        tmpEdge.set(carManagerRoundabout, true);
+        tmpEdge = graph.edge(10, 1).set(carAvSpeedEnc, 60, 0).setDistance(2).setKeyValues(Map.of(STREET_NAME, new KValue("10-1")));
+        tmpEdge.set(carManagerRoundabout, true);
+        tmpEdge = graph.edge(3, 2).set(carAvSpeedEnc, 60, 0).setDistance(5).setKeyValues(Map.of(STREET_NAME, new KValue("2-3")));
+        tmpEdge.set(carManagerRoundabout, true);
+        tmpEdge = graph.edge(4, 3).set(carAvSpeedEnc, 60, 0).setDistance(5).setKeyValues(Map.of(STREET_NAME, new KValue("3-4")));
+        tmpEdge.set(carManagerRoundabout, true);
+        tmpEdge = graph.edge(5, 4).set(carAvSpeedEnc, 60, 0).setDistance(5).setKeyValues(Map.of(STREET_NAME, new KValue("4-5")));
+        tmpEdge.set(carManagerRoundabout, true);
+        tmpEdge = graph.edge(2, 5).set(carAvSpeedEnc, 60, 0).setDistance(5).setKeyValues(Map.of(STREET_NAME, new KValue("5-2")));
+        tmpEdge.set(carManagerRoundabout, true);
 
-        GHUtility.setSpeed(60, true, true, encoder, graph.edge(4, 7).setDistance(5)).setName("MainStreet 4 7");
-        GHUtility.setSpeed(60, true, true, encoder, graph.edge(5, 8).setDistance(5)).setName("5-8");
-        GHUtility.setSpeed(60, true, true, encoder, graph.edge(3, 6).setDistance(5)).setName("3-6");
+        graph.edge(4, 7).set(carAvSpeedEnc, 60, 60).setDistance(5).setKeyValues(Map.of(STREET_NAME, new KValue("MainStreet 4 7")));
+        graph.edge(5, 8).set(carAvSpeedEnc, 60, 60).setDistance(5).setKeyValues(Map.of(STREET_NAME, new KValue("5-8")));
+        graph.edge(3, 6).set(carAvSpeedEnc, 60, 60).setDistance(5).setKeyValues(Map.of(STREET_NAME, new KValue("3-6")));
+        BooleanEncodedValue carAccessEncTmp = carManager.getBooleanEncodedValue(VehicleAccess.key("car"));
+        AllEdgesIterator iter = graph.getAllEdges();
+        while (iter.next()) {
+            if (iter.get(carAvSpeedEnc) > 0) iter.set(carAccessEncTmp, true);
+            if (iter.getReverse(carAvSpeedEnc) > 0) iter.setReverse(carAccessEncTmp, true);
+        }
 
-        ShortestWeighting weighting = new ShortestWeighting(encoder);
+        Weighting weighting = new SpeedWeighting(carAvSpeedEnc);
         Path p = new Dijkstra(graph, weighting, TraversalMode.NODE_BASED)
                 .calcPath(6, 11);
         assertTrue(p.isFound());
         InstructionList wayList = InstructionsFromEdges.calcInstructions(p, p.graph, weighting, carManager, tr);
         List<String> tmpList = getTurnDescriptions(wayList);
-        assertEquals(Arrays.asList("At roundabout, take exit 1 onto MainStreet 1 11",
+        assertEquals(List.of("At roundabout, take exit 1 onto MainStreet 1 11",
                         "arrive at destination"),
                 tmpList);
     }
@@ -547,13 +585,13 @@ public class PathTest {
     @Test
     public void testCalcInstructionsRoundaboutClockwise() {
         roundaboutGraph.setRoundabout(true);
-        ShortestWeighting weighting = new ShortestWeighting(mixedEncoders.getEncoder("car"));
+        Weighting weighting = new SpeedWeighting(mixedCarSpeedEnc);
         Path p = new Dijkstra(roundaboutGraph.g, weighting, TraversalMode.NODE_BASED)
                 .calcPath(1, 8);
         assertTrue(p.isFound());
-        InstructionList wayList = InstructionsFromEdges.calcInstructions(p, p.graph, weighting, mixedEncoders, tr);
+        InstructionList wayList = InstructionsFromEdges.calcInstructions(p, p.graph, weighting, mixedEncodingManager, tr);
         List<String> tmpList = getTurnDescriptions(wayList);
-        assertEquals(Arrays.asList("continue onto MainStreet 1 2",
+        assertEquals(List.of("continue onto MainStreet 1 2",
                         "At roundabout, take exit 1 onto 5-8",
                         "arrive at destination"),
                 tmpList);
@@ -566,11 +604,11 @@ public class PathTest {
     @Test
     public void testCalcInstructionsIgnoreContinue() {
         // Follow a couple of straight edges, including a name change
-        ShortestWeighting weighting = new ShortestWeighting(mixedEncoders.getEncoder("car"));
+        Weighting weighting = new SpeedWeighting(mixedCarSpeedEnc);
         Path p = new Dijkstra(roundaboutGraph.g, weighting, TraversalMode.NODE_BASED)
                 .calcPath(4, 11);
         assertTrue(p.isFound());
-        InstructionList wayList = InstructionsFromEdges.calcInstructions(p, p.graph, weighting, mixedEncoders, tr);
+        InstructionList wayList = InstructionsFromEdges.calcInstructions(p, p.graph, weighting, mixedEncodingManager, tr);
 
         // Contain only start and finish instruction, no CONTINUE
         assertEquals(2, wayList.size());
@@ -579,11 +617,11 @@ public class PathTest {
     @Test
     public void testCalcInstructionsIgnoreTurnIfNoAlternative() {
         // The street turns left, but there is not turn
-        ShortestWeighting weighting = new ShortestWeighting(mixedEncoders.getEncoder("car"));
+        Weighting weighting = new SpeedWeighting(mixedCarSpeedEnc);
         Path p = new Dijkstra(roundaboutGraph.g, weighting, TraversalMode.NODE_BASED)
                 .calcPath(10, 12);
         assertTrue(p.isFound());
-        InstructionList wayList = InstructionsFromEdges.calcInstructions(p, p.graph, weighting, mixedEncoders, tr);
+        InstructionList wayList = InstructionsFromEdges.calcInstructions(p, p.graph, weighting, mixedEncodingManager, tr);
 
         // Contain only start and finish instruction
         assertEquals(2, wayList.size());
@@ -591,7 +629,7 @@ public class PathTest {
 
     @Test
     public void testCalcInstructionForForkWithSameName() {
-        final Graph graph = new GraphBuilder(carManager).create();
+        final BaseGraph graph = new BaseGraph.Builder(carManager).create();
         final NodeAccess na = graph.getNodeAccess();
 
         // Actual example: point=48.982618%2C13.122021&point=48.982336%2C13.121002
@@ -607,11 +645,11 @@ public class PathTest {
         na.setNode(3, 48.982611, 13.121012);
         na.setNode(4, 48.982336, 13.121002);
 
-        GHUtility.setSpeed(60, true, true, encoder, graph.edge(1, 2).setDistance(5)).setName("Regener Weg");
-        GHUtility.setSpeed(60, true, true, encoder, graph.edge(2, 4).setDistance(5)).setName("Regener Weg");
-        GHUtility.setSpeed(60, true, true, encoder, graph.edge(2, 3).setDistance(5));
+        graph.edge(1, 2).set(carAvSpeedEnc, 60, 60).setDistance(5).setKeyValues(Map.of(STREET_NAME, new KValue("Regener Weg")));
+        graph.edge(2, 4).set(carAvSpeedEnc, 60, 60).setDistance(5).setKeyValues(Map.of(STREET_NAME, new KValue("Regener Weg")));
+        graph.edge(2, 3).set(carAvSpeedEnc, 60, 60).setDistance(5);
 
-        ShortestWeighting weighting = new ShortestWeighting(encoder);
+        Weighting weighting = new SpeedWeighting(carAvSpeedEnc);
         Path p = new Dijkstra(graph, weighting, TraversalMode.NODE_BASED)
                 .calcPath(1, 4);
         assertTrue(p.isFound());
@@ -623,7 +661,7 @@ public class PathTest {
 
     @Test
     public void testCalcInstructionForMotorwayFork() {
-        final Graph graph = new GraphBuilder(carManager).create();
+        final BaseGraph graph = new BaseGraph.Builder(carManager).create();
         final NodeAccess na = graph.getNodeAccess();
 
         // Actual example: point=48.909071%2C8.647136&point=48.908789%2C8.649244
@@ -640,11 +678,11 @@ public class PathTest {
         EnumEncodedValue<RoadClass> roadClassEnc = carManager.getEnumEncodedValue(RoadClass.KEY, RoadClass.class);
         BooleanEncodedValue roadClassLinkEnc = carManager.getBooleanEncodedValue(RoadClassLink.KEY);
 
-        GHUtility.setSpeed(60, true, true, encoder, graph.edge(1, 2).setDistance(5)).setName("A 8").set(roadClassEnc, RoadClass.MOTORWAY).set(roadClassLinkEnc, false);
-        GHUtility.setSpeed(60, true, true, encoder, graph.edge(2, 4).setDistance(5)).setName("A 8").set(roadClassEnc, RoadClass.MOTORWAY).set(roadClassLinkEnc, false);
-        GHUtility.setSpeed(60, true, true, encoder, graph.edge(2, 3).setDistance(5)).set(roadClassEnc, RoadClass.MOTORWAY).set(roadClassLinkEnc, true);
+        graph.edge(1, 2).set(carAvSpeedEnc, 60, 60).setDistance(5).setKeyValues(Map.of(STREET_NAME, new KValue("A 8"))).set(roadClassEnc, RoadClass.MOTORWAY).set(roadClassLinkEnc, false);
+        graph.edge(2, 4).set(carAvSpeedEnc, 60, 60).setDistance(5).setKeyValues(Map.of(STREET_NAME, new KValue("A 8"))).set(roadClassEnc, RoadClass.MOTORWAY).set(roadClassLinkEnc, false);
+        graph.edge(2, 3).set(carAvSpeedEnc, 60, 60).setDistance(5).set(roadClassEnc, RoadClass.MOTORWAY).set(roadClassLinkEnc, true);
 
-        ShortestWeighting weighting = new ShortestWeighting(encoder);
+        Weighting weighting = new SpeedWeighting(carAvSpeedEnc);
         Path p = new Dijkstra(graph, weighting, TraversalMode.NODE_BASED)
                 .calcPath(1, 4);
         assertTrue(p.isFound());
@@ -655,7 +693,7 @@ public class PathTest {
 
     @Test
     public void testCalcInstructionsEnterMotorway() {
-        final Graph graph = new GraphBuilder(carManager).create();
+        final BaseGraph graph = new BaseGraph.Builder(carManager).create();
         final NodeAccess na = graph.getNodeAccess();
 
         // Actual example: point=48.630533%2C9.459416&point=48.630544%2C9.459829
@@ -668,11 +706,11 @@ public class PathTest {
         na.setNode(3, 48.630558, 9.459851);
         na.setNode(4, 48.63054, 9.459406);
 
-        GHUtility.setSpeed(60, true, false, encoder, graph.edge(1, 2).setDistance(5)).setName("A 8");
-        GHUtility.setSpeed(60, true, false, encoder, graph.edge(2, 3).setDistance(5)).setName("A 8");
-        GHUtility.setSpeed(60, true, false, encoder, graph.edge(4, 2).setDistance(5)).setName("A 8");
+        graph.edge(1, 2).set(carAvSpeedEnc, 60, 0).setDistance(5).setKeyValues(Map.of(STREET_NAME, new KValue("A 8")));
+        graph.edge(2, 3).set(carAvSpeedEnc, 60, 0).setDistance(5).setKeyValues(Map.of(STREET_NAME, new KValue("A 8")));
+        graph.edge(4, 2).set(carAvSpeedEnc, 60, 0).setDistance(5).setKeyValues(Map.of(STREET_NAME, new KValue("A 8")));
 
-        ShortestWeighting weighting = new ShortestWeighting(encoder);
+        Weighting weighting = new SpeedWeighting(carAvSpeedEnc);
         Path p = new Dijkstra(graph, weighting, TraversalMode.NODE_BASED)
                 .calcPath(4, 3);
         assertTrue(p.isFound());
@@ -684,7 +722,7 @@ public class PathTest {
 
     @Test
     public void testCalcInstructionsMotorwayJunction() {
-        final Graph g = new GraphBuilder(carManager).create();
+        final BaseGraph g = new BaseGraph.Builder(carManager).create();
         final NodeAccess na = g.getNodeAccess();
 
         // Actual example: point=48.70672%2C9.164266&point=48.706805%2C9.162995
@@ -697,11 +735,11 @@ public class PathTest {
         na.setNode(3, 48.706805, 9.162995);
         na.setNode(4, 48.706705, 9.16329);
 
-        GHUtility.setSpeed(60, true, false, encoder, g.edge(1, 2).setDistance(5)).setName("A 8");
-        GHUtility.setSpeed(60, true, false, encoder, g.edge(2, 3).setDistance(5)).setName("A 8");
-        GHUtility.setSpeed(60, true, false, encoder, g.edge(2, 4).setDistance(5)).setName("A 8");
+        g.edge(1, 2).setDistance(5).set(carAvSpeedEnc, 60, 0).setKeyValues(Map.of(STREET_NAME, new KValue("A 8")));
+        g.edge(2, 3).setDistance(5).set(carAvSpeedEnc, 60, 0).setKeyValues(Map.of(STREET_NAME, new KValue("A 8")));
+        g.edge(2, 4).setDistance(5).set(carAvSpeedEnc, 60, 0).setKeyValues(Map.of(STREET_NAME, new KValue("A 8")));
 
-        ShortestWeighting weighting = new ShortestWeighting(encoder);
+        Weighting weighting = new SpeedWeighting(carAvSpeedEnc);
         Path p = new Dijkstra(g, weighting, TraversalMode.NODE_BASED)
                 .calcPath(1, 3);
         assertTrue(p.isFound());
@@ -714,7 +752,7 @@ public class PathTest {
 
     @Test
     public void testCalcInstructionsOntoOneway() {
-        final Graph g = new GraphBuilder(carManager).create();
+        final BaseGraph g = new BaseGraph.Builder(carManager).create();
         final NodeAccess na = g.getNodeAccess();
 
         // Actual example: point=-33.824566%2C151.187834&point=-33.82441%2C151.188231
@@ -727,11 +765,11 @@ public class PathTest {
         na.setNode(3, -33.824415, 151.188177);
         na.setNode(4, -33.824437, 151.187925);
 
-        GHUtility.setSpeed(60, true, false, encoder, g.edge(1, 2).setDistance(5)).setName("Pacific Highway");
-        GHUtility.setSpeed(60, true, false, encoder, g.edge(2, 3).setDistance(5)).setName("Pacific Highway");
-        GHUtility.setSpeed(60, true, true, encoder, g.edge(4, 2).setDistance(5)).setName("Greenwich Road");
+        g.edge(1, 2).setDistance(5).set(carAvSpeedEnc, 60, 0).setKeyValues(Map.of(STREET_NAME, new KValue("Pacific Highway")));
+        g.edge(2, 3).setDistance(5).set(carAvSpeedEnc, 60, 0).setKeyValues(Map.of(STREET_NAME, new KValue("Pacific Highway")));
+        g.edge(4, 2).setDistance(5).set(carAvSpeedEnc, 60, 60).setKeyValues(Map.of(STREET_NAME, new KValue("Greenwich Road")));
 
-        ShortestWeighting weighting = new ShortestWeighting(encoder);
+        Weighting weighting = new SpeedWeighting(carAvSpeedEnc);
         Path p = new Dijkstra(g, weighting, TraversalMode.NODE_BASED)
                 .calcPath(4, 3);
         assertTrue(p.isFound());
@@ -743,7 +781,7 @@ public class PathTest {
 
     @Test
     public void testCalcInstructionIssue1047() {
-        final Graph g = new GraphBuilder(carManager).create();
+        final BaseGraph g = new BaseGraph.Builder(carManager).create();
         final NodeAccess na = g.getNodeAccess();
 
         // Actual example: point=51.367105%2C14.491246&point=51.369048%2C14.483092
@@ -762,11 +800,11 @@ public class PathTest {
         EnumEncodedValue<RoadClass> roadClassEnc = carManager.getEnumEncodedValue(RoadClass.KEY, RoadClass.class);
         BooleanEncodedValue roadClassLinkEnc = carManager.getBooleanEncodedValue(RoadClassLink.KEY);
 
-        GHUtility.setSpeed(60, true, true, encoder, g.edge(1, 2).setDistance(5)).setName("B 156").set(roadClassEnc, RoadClass.PRIMARY).set(roadClassLinkEnc, false);
-        GHUtility.setSpeed(60, true, true, encoder, g.edge(2, 4).setDistance(5)).setName("S 108").set(roadClassEnc, RoadClass.SECONDARY).set(roadClassLinkEnc, false);
-        GHUtility.setSpeed(60, true, true, encoder, g.edge(2, 3).setDistance(5)).setName("B 156").set(roadClassEnc, RoadClass.PRIMARY).set(roadClassLinkEnc, false);
+        g.edge(1, 2).set(carAvSpeedEnc, 60, 60).setDistance(5).setKeyValues(Map.of(STREET_NAME, new KValue("B 156"))).set(roadClassEnc, RoadClass.PRIMARY).set(roadClassLinkEnc, false);
+        g.edge(2, 4).set(carAvSpeedEnc, 60, 60).setDistance(5).setKeyValues(Map.of(STREET_NAME, new KValue("S 108"))).set(roadClassEnc, RoadClass.SECONDARY).set(roadClassLinkEnc, false);
+        g.edge(2, 3).set(carAvSpeedEnc, 60, 60).setDistance(5).setKeyValues(Map.of(STREET_NAME, new KValue("B 156"))).set(roadClassEnc, RoadClass.PRIMARY).set(roadClassLinkEnc, false);
 
-        ShortestWeighting weighting = new ShortestWeighting(encoder);
+        Weighting weighting = new SpeedWeighting(carAvSpeedEnc);
         Path p = new Dijkstra(g, weighting, TraversalMode.NODE_BASED)
                 .calcPath(1, 4);
         assertTrue(p.isFound());
@@ -784,7 +822,7 @@ public class PathTest {
 
     @Test
     public void testCalcInstructionContinueLeavingStreet() {
-        final Graph g = new GraphBuilder(carManager).create();
+        final BaseGraph g = new BaseGraph.Builder(carManager).create();
         final NodeAccess na = g.getNodeAccess();
 
         // When leaving the current street via a Continue, we should show it
@@ -796,11 +834,11 @@ public class PathTest {
         na.setNode(3, 48.982611, 13.121012);
         na.setNode(4, 48.982565, 13.121002);
 
-        GHUtility.setSpeed(60, true, true, encoder, g.edge(1, 2).setDistance(5)).setName("Regener Weg");
-        GHUtility.setSpeed(60, true, true, encoder, g.edge(2, 4).setDistance(5));
-        GHUtility.setSpeed(60, true, true, encoder, g.edge(2, 3).setDistance(5)).setName("Regener Weg");
+        g.edge(1, 2).set(carAvSpeedEnc, 60, 60).setDistance(5).setKeyValues(Map.of(STREET_NAME, new KValue("Regener Weg")));
+        g.edge(2, 4).set(carAvSpeedEnc, 60, 60).setDistance(5);
+        g.edge(2, 3).set(carAvSpeedEnc, 60, 60).setDistance(5).setKeyValues(Map.of(STREET_NAME, new KValue("Regener Weg")));
 
-        ShortestWeighting weighting = new ShortestWeighting(encoder);
+        Weighting weighting = new SpeedWeighting(carAvSpeedEnc);
         Path p = new Dijkstra(g, weighting, TraversalMode.NODE_BASED)
                 .calcPath(1, 4);
         assertTrue(p.isFound());
@@ -812,7 +850,7 @@ public class PathTest {
 
     @Test
     public void testCalcInstructionSlightTurn() {
-        final Graph g = new GraphBuilder(carManager).create();
+        final BaseGraph g = new BaseGraph.Builder(carManager).create();
         final NodeAccess na = g.getNodeAccess();
 
         // Real Situation: point=48.411927%2C15.599197&point=48.412094%2C15.598816
@@ -826,11 +864,11 @@ public class PathTest {
         na.setNode(3, 48.412034, 15.599411);
         na.setNode(4, 48.411927, 15.599197);
 
-        GHUtility.setSpeed(60, true, true, encoder, g.edge(1, 2).setDistance(5)).setName("Stöhrgasse");
-        GHUtility.setSpeed(60, true, true, encoder, g.edge(2, 3).setDistance(5));
-        GHUtility.setSpeed(60, true, true, encoder, g.edge(2, 4).setDistance(5)).setName("Stöhrgasse");
+        g.edge(1, 2).set(carAvSpeedEnc, 60, 60).setDistance(5).setKeyValues(Map.of(STREET_NAME, new KValue("Stöhrgasse")));
+        g.edge(2, 3).set(carAvSpeedEnc, 60, 60).setDistance(5);
+        g.edge(2, 4).set(carAvSpeedEnc, 60, 60).setDistance(5).setKeyValues(Map.of(STREET_NAME, new KValue("Stöhrgasse")));
 
-        ShortestWeighting weighting = new ShortestWeighting(encoder);
+        Weighting weighting = new SpeedWeighting(carAvSpeedEnc);
         Path p = new Dijkstra(g, weighting, TraversalMode.NODE_BASED)
                 .calcPath(4, 1);
         assertTrue(p.isFound());
@@ -842,7 +880,7 @@ public class PathTest {
 
     @Test
     public void testUTurnLeft() {
-        final Graph g = new GraphBuilder(carManager).create();
+        final BaseGraph g = new BaseGraph.Builder(carManager).create();
         final NodeAccess na = g.getNodeAccess();
 
         // Real Situation: point=48.402116%2C9.994367&point=48.402198%2C9.99507
@@ -859,16 +897,14 @@ public class PathTest {
         na.setNode(6, 48.402422, 9.996067);
         na.setNode(7, 48.402604, 9.994962);
 
-        GHUtility.setSpeed(60, 0, encoder,
-                g.edge(1, 2).setDistance(5).setName("Olgastraße"),
-                g.edge(2, 3).setDistance(5).setName("Olgastraße"),
-                g.edge(6, 5).setDistance(5).setName("Olgastraße"),
-                g.edge(5, 4).setDistance(5).setName("Olgastraße"));
-        GHUtility.setSpeed(60, 60, encoder,
-                g.edge(2, 5).setDistance(5).setName("Neithardtstraße"),
-                g.edge(5, 7).setDistance(5).setName("Neithardtstraße"));
+        g.edge(1, 2).set(carAvSpeedEnc, 60, 0).setDistance(5).setKeyValues(Map.of(STREET_NAME, new KValue("Olgastraße")));
+        g.edge(2, 3).set(carAvSpeedEnc, 60, 0).setDistance(5).setKeyValues(Map.of(STREET_NAME, new KValue("Olgastraße")));
+        g.edge(6, 5).set(carAvSpeedEnc, 60, 0).setDistance(5).setKeyValues(Map.of(STREET_NAME, new KValue("Olgastraße")));
+        g.edge(5, 4).set(carAvSpeedEnc, 60, 0).setDistance(5).setKeyValues(Map.of(STREET_NAME, new KValue("Olgastraße")));
+        g.edge(2, 5).set(carAvSpeedEnc, 60, 60).setDistance(5).setKeyValues(Map.of(STREET_NAME, new KValue("Neithardtstraße")));
+        g.edge(5, 7).set(carAvSpeedEnc, 60, 60).setDistance(5).setKeyValues(Map.of(STREET_NAME, new KValue("Neithardtstraße")));
 
-        ShortestWeighting weighting = new ShortestWeighting(encoder);
+        Weighting weighting = new SpeedWeighting(carAvSpeedEnc);
         Path p = new Dijkstra(g, weighting, TraversalMode.NODE_BASED)
                 .calcPath(1, 4);
         assertTrue(p.isFound());
@@ -880,7 +916,7 @@ public class PathTest {
 
     @Test
     public void testUTurnRight() {
-        final Graph g = new GraphBuilder(carManager).create();
+        final BaseGraph g = new BaseGraph.Builder(carManager).create();
         final NodeAccess na = g.getNodeAccess();
 
         // Real Situation: point=-33.885758,151.181472&point=-33.885692,151.181445
@@ -897,21 +933,22 @@ public class PathTest {
         na.setNode(6, -33.885692, 151.181445);
         na.setNode(7, -33.885692, 151.181445);
 
-        GHUtility.setSpeed(60, 0, encoder,
-                g.edge(1, 2).setDistance(5).setName("Parramatta Road"),
-                g.edge(2, 3).setDistance(5).setName("Parramatta Road"),
-                g.edge(4, 5).setDistance(5).setName("Parramatta Road"),
-                g.edge(5, 6).setDistance(5).setName("Parramatta Road"));
-        GHUtility.setSpeed(60, 60, encoder,
-                g.edge(2, 5).setDistance(5).setName("Larkin Street"),
-                g.edge(5, 7).setDistance(5).setName("Larkin Street"));
+        g.edge(1, 2).set(carAvSpeedEnc, 60, 0).setDistance(5).setKeyValues(Map.of(STREET_NAME, new KValue("Parramatta Road")));
+        g.edge(2, 3).set(carAvSpeedEnc, 60, 0).setDistance(5).setKeyValues(Map.of(STREET_NAME, new KValue("Parramatta Road")));
+        g.edge(4, 5).set(carAvSpeedEnc, 60, 0).setDistance(5).setKeyValues(Map.of(STREET_NAME, new KValue("Parramatta Road")));
+        g.edge(5, 6).set(carAvSpeedEnc, 60, 0).setDistance(5).setKeyValues(Map.of(STREET_NAME, new KValue("Parramatta Road")));
+        g.edge(2, 5).set(carAvSpeedEnc, 60, 60).setDistance(5).setKeyValues(Map.of(STREET_NAME, new KValue("Larkin Street")));
+        g.edge(5, 7).set(carAvSpeedEnc, 60, 60).setDistance(5).setKeyValues(Map.of(STREET_NAME, new KValue("Larkin Street")));
 
-        ShortestWeighting weighting = new ShortestWeighting(encoder);
+        Weighting weighting = new SpeedWeighting(carAvSpeedEnc);
         Path p = new Dijkstra(g, weighting, TraversalMode.NODE_BASED)
                 .calcPath(1, 6);
         assertTrue(p.isFound());
+        assertEquals(IntArrayList.from(1, 2, 5, 6), p.calcNodes());
         InstructionList wayList = InstructionsFromEdges.calcInstructions(p, p.graph, weighting, carManager, tr);
 
+        assertEquals(List.of("continue onto Parramatta Road", "make a U-turn onto Parramatta Road", "arrive at destination"),
+                getTurnDescriptions(wayList));
         assertEquals(3, wayList.size());
         assertEquals(Instruction.U_TURN_RIGHT, wayList.get(1).getSign());
     }
@@ -919,11 +956,11 @@ public class PathTest {
     @Test
     public void testCalcInstructionsForTurn() {
         // The street turns left, but there is not turn
-        ShortestWeighting weighting = new ShortestWeighting(mixedEncoders.getEncoder("car"));
+        Weighting weighting = new SpeedWeighting(mixedCarSpeedEnc);
         Path p = new Dijkstra(roundaboutGraph.g, weighting, TraversalMode.NODE_BASED)
                 .calcPath(11, 13);
         assertTrue(p.isFound());
-        InstructionList wayList = InstructionsFromEdges.calcInstructions(p, p.graph, weighting, mixedEncoders, tr);
+        InstructionList wayList = InstructionsFromEdges.calcInstructions(p, p.graph, weighting, mixedEncodingManager, tr);
 
         // Contain start, turn, and finish instruction
         assertEquals(3, wayList.size());
@@ -933,12 +970,12 @@ public class PathTest {
 
     @Test
     public void testCalcInstructionsForSlightTurnWithOtherSlightTurn() {
-        // Test for a fork with two sligh turns. Since there are two sligh turns, show the turn instruction
-        ShortestWeighting weighting = new ShortestWeighting(mixedEncoders.getEncoder("car"));
+        // Test for a fork with two slight turns. Since there are two slight turns, show the turn instruction
+        Weighting weighting = new SpeedWeighting(mixedCarSpeedEnc);
         Path p = new Dijkstra(roundaboutGraph.g, weighting, TraversalMode.NODE_BASED)
                 .calcPath(12, 16);
         assertTrue(p.isFound());
-        InstructionList wayList = InstructionsFromEdges.calcInstructions(p, p.graph, weighting, mixedEncoders, tr);
+        InstructionList wayList = InstructionsFromEdges.calcInstructions(p, p.graph, weighting, mixedEncodingManager, tr);
 
         // Contain start, turn, and finish instruction
         assertEquals(3, wayList.size());
@@ -948,7 +985,7 @@ public class PathTest {
 
     @Test
     public void testCalcInstructionsForSlightTurnOntoDifferentStreet() {
-        final Graph g = new GraphBuilder(carManager).create();
+        final BaseGraph g = new BaseGraph.Builder(carManager).create();
         final NodeAccess na = g.getNodeAccess();
 
         // Actual example: point=48.76445%2C8.679054&point=48.764152%2C8.678722
@@ -961,11 +998,11 @@ public class PathTest {
         na.setNode(3, 48.764149, 8.678926);
         na.setNode(4, 48.764085, 8.679183);
 
-        GHUtility.setSpeed(60, true, true, encoder, g.edge(1, 3).setDistance(5)).setName("Talstraße, K 4313");
-        GHUtility.setSpeed(60, true, true, encoder, g.edge(2, 3).setDistance(5)).setName("Calmbacher Straße, K 4312");
-        GHUtility.setSpeed(60, true, true, encoder, g.edge(3, 4).setDistance(5)).setName("Calmbacher Straße, K 4312");
+        g.edge(1, 3).setDistance(5).set(carAvSpeedEnc, 60, 60).setKeyValues(Map.of(STREET_NAME, new KValue("Talstraße, new KValue( K 4313")));
+        g.edge(2, 3).setDistance(5).set(carAvSpeedEnc, 60, 60).setKeyValues(Map.of(STREET_NAME, new KValue("Calmbacher Straße, new KValue( K 4312")));
+        g.edge(3, 4).setDistance(5).set(carAvSpeedEnc, 60, 60).setKeyValues(Map.of(STREET_NAME, new KValue("Calmbacher Straße, new KValue( K 4312")));
 
-        ShortestWeighting weighting = new ShortestWeighting(encoder);
+        Weighting weighting = new SpeedWeighting(carAvSpeedEnc);
         Path p = new Dijkstra(g, weighting, TraversalMode.NODE_BASED)
                 .calcPath(1, 2);
         assertTrue(p.isFound());
@@ -977,15 +1014,131 @@ public class PathTest {
 
     @Test
     public void testIgnoreInstructionsForSlightTurnWithOtherTurn() {
-        // Test for a fork with one sligh turn and one actual turn. We are going along the slight turn. No turn instruction needed in this case
-        ShortestWeighting weighting = new ShortestWeighting(mixedEncoders.getEncoder("car"));
+        // Test for a fork with one slight turn and one actual turn. We are going along the slight turn. No turn instruction needed in this case
+        Weighting weighting = new SpeedWeighting(mixedCarSpeedEnc);
         Path p = new Dijkstra(roundaboutGraph.g, weighting, TraversalMode.NODE_BASED)
                 .calcPath(16, 19);
         assertTrue(p.isFound());
-        InstructionList wayList = InstructionsFromEdges.calcInstructions(p, p.graph, weighting, mixedEncoders, tr);
+        InstructionList wayList = InstructionsFromEdges.calcInstructions(p, p.graph, weighting, mixedEncodingManager, tr);
 
         // Contain start, and finish instruction
         assertEquals(2, wayList.size());
+    }
+
+    @Test
+    public void testFootAndCar_issue3081() {
+        BooleanEncodedValue carAccessEnc = VehicleAccess.create("car");
+        BooleanEncodedValue footAccessEnc = VehicleAccess.create("foot");
+        BooleanEncodedValue rdEnc = Roundabout.create();
+        EncodingManager manager = EncodingManager.start().
+                add(carAccessEnc).
+                add(footAccessEnc).
+                add(RoadClass.create()).
+                add(RoadClassLink.create()).
+                add(MaxSpeed.create()).
+                add(rdEnc).build();
+
+        final BaseGraph g = new BaseGraph.Builder(manager).create();
+        final NodeAccess na = g.getNodeAccess();
+
+        // Actual example is here 45.7742,4.868 (but a few roads left out)
+        //      0 1
+        //       \|
+        //        2<-3<--4
+        //      /     \
+        //      |      5-->6
+        //      \     /
+        //    7--8-->9<--10
+
+        na.setNode(0, 52.503809,13.410198);
+        na.setNode(1, 52.503871,13.410249);
+        na.setNode(2, 52.503751, 13.410377);
+        na.setNode(3, 52.50387, 13.410807);
+        na.setNode(4, 52.503989, 13.41094);
+        na.setNode(5, 52.503794, 13.411024);
+        na.setNode(6, 52.503925, 13.411034);
+        na.setNode(7, 52.503277, 13.41041);
+        na.setNode(8, 52.50344, 13.410545);
+        na.setNode(9, 52.503536, 13.411099);
+        na.setNode(10, 52.503515, 13.411178);
+
+        g.edge(0, 2).setDistance(5).set(carAccessEnc, true, true).set(footAccessEnc, true, true).setKeyValues(Map.of(STREET_NAME, new KValue("Nordwest")));
+        // edge 1-2 does not exist in real world, but we need it to test a few other situations
+        g.edge(1, 2).setDistance(5).set(carAccessEnc, false, false).set(footAccessEnc, true, true).setKeyValues(Map.of(STREET_NAME, new KValue("Nordwest, foot-only")));
+        g.edge(4, 3).setDistance(5).set(carAccessEnc, true, false).set(footAccessEnc, true, true).setKeyValues(Map.of(STREET_NAME, new KValue("Nordeast in")));
+        g.edge(5, 6).setDistance(5).set(carAccessEnc, true, false).set(footAccessEnc, true, true).setKeyValues(Map.of(STREET_NAME, new KValue("Nordeast out")));
+        g.edge(10, 9).setDistance(5).set(carAccessEnc, true, false).set(footAccessEnc, true, true).setKeyValues(Map.of(STREET_NAME, new KValue("Southeast in")));
+        g.edge(7, 8).setDistance(5).set(carAccessEnc, true, true).set(footAccessEnc, true, true).setKeyValues(Map.of(STREET_NAME, new KValue("Southwest")));
+
+        g.edge(3, 2).setDistance(5).set(carAccessEnc, true, false).set(footAccessEnc, true, false).set(rdEnc, true).setKeyValues(Map.of(STREET_NAME, new KValue("roundabout")));
+        g.edge(5, 3).setDistance(5).set(carAccessEnc, true, false).set(footAccessEnc, true, false).set(rdEnc, true).setKeyValues(Map.of(STREET_NAME, new KValue("roundabout")));
+        g.edge(9, 5).setDistance(5).set(carAccessEnc, true, false).set(footAccessEnc, true, false).set(rdEnc, true).setKeyValues(Map.of(STREET_NAME, new KValue("roundabout")));
+        g.edge(8, 9).setDistance(5).set(carAccessEnc, true, false).set(footAccessEnc, true, false).set(rdEnc, true).setKeyValues(Map.of(STREET_NAME, new KValue("roundabout")));
+        g.edge(2, 8).setDistance(5).set(carAccessEnc, true, false).set(footAccessEnc, true, false).set(rdEnc, true).setKeyValues(Map.of(STREET_NAME, new KValue("roundabout")));
+
+        Weighting weighting = new AccessWeighting(footAccessEnc);
+        Path p = new Dijkstra(g, weighting, TraversalMode.NODE_BASED).calcPath(7, 10);
+        assertEquals("[7, 8, 9, 10]", p.calcNodes().toString());
+        InstructionList wayList = InstructionsFromEdges.calcInstructions(p, g, weighting, manager, tr);
+        assertEquals("At roundabout, take exit 1 onto Southeast in", wayList.get(1).getTurnDescription(tr));
+
+        p = new Dijkstra(g, weighting, TraversalMode.NODE_BASED).calcPath(10, 1);
+        assertEquals("[10, 9, 5, 3, 2, 1]", p.calcNodes().toString());
+        wayList = InstructionsFromEdges.calcInstructions(p, g, weighting, manager, tr);
+        assertEquals("At roundabout, take exit 2 onto Nordwest, foot-only", wayList.get(1).getTurnDescription(tr));
+
+        p = new Dijkstra(g, weighting, TraversalMode.NODE_BASED).calcPath(10, 4);
+        assertEquals("[10, 9, 5, 3, 4]", p.calcNodes().toString());
+        wayList = InstructionsFromEdges.calcInstructions(p, g, weighting, manager, tr);
+        assertEquals("At roundabout, take exit 1 onto Nordeast in", wayList.get(1).getTurnDescription(tr));
+
+        p = new Dijkstra(g, weighting, TraversalMode.NODE_BASED).calcPath(10, 6);
+        assertEquals("[10, 9, 5, 6]", p.calcNodes().toString());
+        wayList = InstructionsFromEdges.calcInstructions(p, g, weighting, manager, tr);
+        assertEquals("At roundabout, take exit 1 onto Nordeast out", wayList.get(1).getTurnDescription(tr));
+    }
+
+    static class AccessWeighting implements Weighting {
+        private final BooleanEncodedValue accessEnc;
+
+        public AccessWeighting(BooleanEncodedValue accessEnc) {
+            this.accessEnc = accessEnc;
+        }
+
+        @Override
+        public double calcMinWeightPerDistance() {
+            throw new IllegalStateException();
+        }
+
+        @Override
+        public double calcEdgeWeight(EdgeIteratorState edgeState, boolean reverse) {
+            return (reverse && edgeState.getReverse(accessEnc) || edgeState.get(accessEnc)) ? 1 : Double.POSITIVE_INFINITY;
+        }
+
+        @Override
+        public long calcEdgeMillis(EdgeIteratorState edgeState, boolean reverse) {
+            return (reverse && edgeState.getReverse(accessEnc) || edgeState.get(accessEnc)) ? 1000 : 0;
+        }
+
+        @Override
+        public double calcTurnWeight(int inEdge, int viaNode, int outEdge) {
+            return 0;
+        }
+
+        @Override
+        public long calcTurnMillis(int inEdge, int viaNode, int outEdge) {
+            return 0;
+        }
+
+        @Override
+        public boolean hasTurnCosts() {
+            return false;
+        }
+
+        @Override
+        public String getName() {
+            return "access";
+        }
     }
 
     List<String> getTurnDescriptions(InstructionList instructionJson) {
@@ -997,7 +1150,7 @@ public class PathTest {
     }
 
     private Graph generatePathDetailsGraph() {
-        final Graph graph = new GraphBuilder(carManager).create();
+        final BaseGraph graph = new BaseGraph.Builder(carManager).create();
         final NodeAccess na = graph.getNodeAccess();
 
         na.setNode(1, 52.514, 13.348);
@@ -1007,43 +1160,23 @@ public class PathTest {
         na.setNode(5, 52.516, 13.3452);
         na.setNode(6, 52.516, 13.344);
 
-        ReaderWay w = new ReaderWay(1);
-        w.setTag("highway", "tertiary");
-        w.setTag("maxspeed", "50");
-
-        EdgeIteratorState tmpEdge;
-        tmpEdge = GHUtility.setSpeed(60, true, true, encoder, graph.edge(1, 2).setDistance(5)).setName("1-2");
-        assertNotEquals(EncodingManager.Access.CAN_SKIP, ((AbstractFlagEncoder) encoder).getAccess(w));
-        IntsRef relFlags = carManager.createRelationFlags();
-        tmpEdge.setFlags(carManager.handleWayTags(w, relFlags));
-        tmpEdge = GHUtility.setSpeed(60, true, true, encoder, graph.edge(4, 5).setDistance(5)).setName("4-5");
-        tmpEdge.setFlags(carManager.handleWayTags(w, relFlags));
-
-        w.setTag("maxspeed", "100");
-        tmpEdge = GHUtility.setSpeed(60, true, true, encoder, graph.edge(2, 3).setDistance(5)).setName("2-3");
-        tmpEdge.setFlags(carManager.handleWayTags(w, relFlags));
-
-        w.setTag("maxspeed", "10");
-        tmpEdge = GHUtility.setSpeed(60, true, true, encoder, graph.edge(3, 4).setDistance(10)).setName("3-4");
-        tmpEdge.setFlags(carManager.handleWayTags(w, relFlags));
-
-        tmpEdge = GHUtility.setSpeed(60, true, true, encoder, graph.edge(5, 6).setDistance(0.01)).setName("3-4");
-        tmpEdge.setFlags(carManager.handleWayTags(w, relFlags));
-
+        graph.edge(1, 2).set(carAvSpeedEnc, 45, 45).setDistance(5).setKeyValues(Map.of(STREET_NAME, new KValue("1-2")));
+        graph.edge(4, 5).set(carAvSpeedEnc, 45, 45).setDistance(5).setKeyValues(Map.of(STREET_NAME, new KValue("4-5")));
+        graph.edge(2, 3).set(carAvSpeedEnc, 90, 90).setDistance(5).setKeyValues(Map.of(STREET_NAME, new KValue("2-3")));
+        graph.edge(3, 4).set(carAvSpeedEnc, 9, 9).setDistance(10).setKeyValues(Map.of(STREET_NAME, new KValue("3-4")));
+        graph.edge(5, 6).set(carAvSpeedEnc, 9, 9).setDistance(0.001).setKeyValues(Map.of(STREET_NAME, new KValue("3-4")));
         return graph;
     }
 
-    private static class RoundaboutGraph {
-        final Graph g;
+    private class RoundaboutGraph {
+        final BaseGraph g;
         final NodeAccess na;
         final EdgeIteratorState edge3to6, edge3to9;
-        final EncodingManager em;
         boolean clockwise = false;
         List<EdgeIteratorState> roundaboutEdges = new LinkedList<>();
 
-        private RoundaboutGraph(EncodingManager em) {
-            this.em = em;
-            g = new GraphBuilder(em).create();
+        private RoundaboutGraph() {
+            g = new BaseGraph.Builder(mixedEncodingManager).create();
             na = g.getNodeAccess();
             //                                       18
             //      8                 14              |
@@ -1077,20 +1210,20 @@ public class PathTest {
             na.setNode(19, 52.515, 13.368);
 
             // roundabout
-            roundaboutEdges.add(g.edge(3, 2).setDistance(5).setName("2-3"));
-            roundaboutEdges.add(g.edge(4, 3).setDistance(5).setName("3-4"));
-            roundaboutEdges.add(g.edge(5, 4).setDistance(5).setName("4-5"));
-            roundaboutEdges.add(g.edge(2, 5).setDistance(5).setName("5-2"));
+            roundaboutEdges.add(g.edge(3, 2).setDistance(5).setKeyValues(Map.of(STREET_NAME, new KValue("2-3"))));
+            roundaboutEdges.add(g.edge(4, 3).setDistance(5).setKeyValues(Map.of(STREET_NAME, new KValue("3-4"))));
+            roundaboutEdges.add(g.edge(5, 4).setDistance(5).setKeyValues(Map.of(STREET_NAME, new KValue("4-5"))));
+            roundaboutEdges.add(g.edge(2, 5).setDistance(5).setKeyValues(Map.of(STREET_NAME, new KValue("5-2"))));
 
             List<EdgeIteratorState> bothDir = new ArrayList<>();
             List<EdgeIteratorState> oneDir = new ArrayList<>(roundaboutEdges);
 
-            bothDir.add(g.edge(1, 2).setDistance(5).setName("MainStreet 1 2"));
-            bothDir.add(g.edge(4, 7).setDistance(5).setName("MainStreet 4 7"));
-            bothDir.add(g.edge(5, 8).setDistance(5).setName("5-8"));
+            bothDir.add(g.edge(1, 2).setDistance(5).setKeyValues(Map.of(STREET_NAME, new KValue("MainStreet 1 2"))));
+            bothDir.add(g.edge(4, 7).setDistance(5).setKeyValues(Map.of(STREET_NAME, new KValue("MainStreet 4 7"))));
+            bothDir.add(g.edge(5, 8).setDistance(5).setKeyValues(Map.of(STREET_NAME, new KValue("5-8"))));
 
-            bothDir.add(edge3to6 = g.edge(3, 6).setDistance(5).setName("3-6"));
-            oneDir.add(edge3to9 = g.edge(3, 9).setDistance(5).setName("3-9"));
+            bothDir.add(edge3to6 = g.edge(3, 6).setDistance(5).setKeyValues(Map.of(STREET_NAME, new KValue("3-6"))));
+            oneDir.add(edge3to9 = g.edge(3, 9).setDistance(5).setKeyValues(Map.of(STREET_NAME, new KValue("3-9"))));
 
             bothDir.add(g.edge(7, 10).setDistance(5));
             bothDir.add(g.edge(10, 11).setDistance(5));
@@ -1103,41 +1236,41 @@ public class PathTest {
             bothDir.add(g.edge(17, 18).setDistance(5));
             bothDir.add(g.edge(17, 19).setDistance(5));
 
-            for (FlagEncoder encoder : em.fetchEdgeEncoders()) {
-                double speed = encoder.getMaxSpeed() / 2;
-                GHUtility.setSpeed(speed, speed, encoder, bothDir);
-                GHUtility.setSpeed(speed, 0, encoder, oneDir);
+            for (EdgeIteratorState edge : bothDir) {
+                edge.set(mixedCarAccessEnc, true, true);
+                edge.set(mixedCarSpeedEnc, 70, 70);
+                edge.set(mixedFootSpeedEnc, 7, 7);
             }
-
+            for (EdgeIteratorState edge : oneDir) {
+                edge.set(mixedCarAccessEnc, true);
+                edge.set(mixedCarSpeedEnc, 70, 0);
+                edge.set(mixedFootSpeedEnc, 7, 0);
+            }
             setRoundabout(clockwise);
             inverse3to9();
         }
 
         public void setRoundabout(boolean clockwise) {
-            BooleanEncodedValue mixedRoundabout = em.getBooleanEncodedValue(Roundabout.KEY);
-            for (FlagEncoder encoder : em.fetchEdgeEncoders()) {
-                BooleanEncodedValue accessEnc = encoder.getAccessEnc();
-                for (EdgeIteratorState edge : roundaboutEdges) {
-                    edge.set(accessEnc, clockwise).setReverse(accessEnc, !clockwise);
-                    mixedRoundabout.setBool(false, edge.getFlags(), true);
-                    edge.setFlags(edge.getFlags());
-                }
+            BooleanEncodedValue mixedRoundabout = mixedEncodingManager.getBooleanEncodedValue(Roundabout.KEY);
+            for (EdgeIteratorState edge : roundaboutEdges) {
+                edge.set(mixedCarSpeedEnc, clockwise ? 70 : 0, clockwise ? 0 : 70);
+                edge.set(mixedFootSpeedEnc, clockwise ? 7 : 0, clockwise ? 0 : 7);
+                edge.set(mixedCarAccessEnc, clockwise, !clockwise);
+                edge.set(mixedRoundabout, true);
             }
             this.clockwise = clockwise;
         }
 
         public void inverse3to9() {
-            for (FlagEncoder encoder : em.fetchEdgeEncoders()) {
-                BooleanEncodedValue accessEnc = encoder.getAccessEnc();
-                edge3to9.set(accessEnc, !edge3to9.get(accessEnc)).setReverse(accessEnc, false);
-            }
+            edge3to9.set(mixedCarAccessEnc, !edge3to9.get(mixedCarAccessEnc), false);
+            edge3to9.set(mixedCarSpeedEnc, edge3to9.get(mixedCarSpeedEnc) > 0 ? 0 : 70, 0);
+            edge3to9.set(mixedFootSpeedEnc, edge3to9.get(mixedFootSpeedEnc) > 0 ? 0 : 7, 0);
         }
 
         public void inverse3to6() {
-            for (FlagEncoder encoder : em.fetchEdgeEncoders()) {
-                BooleanEncodedValue accessEnc = encoder.getAccessEnc();
-                edge3to6.set(accessEnc, !edge3to6.get(accessEnc)).setReverse(accessEnc, true);
-            }
+            edge3to6.set(mixedCarAccessEnc, !edge3to6.get(mixedCarAccessEnc), true);
+            edge3to6.set(mixedCarSpeedEnc, edge3to6.get(mixedCarSpeedEnc) > 0 ? 0 : 70, 70);
+            edge3to6.set(mixedFootSpeedEnc, edge3to6.get(mixedFootSpeedEnc) > 0 ? 0 : 7, 7);
         }
 
         private double getAngle(int n1, int n2, int n3, int n4) {
